--- a/config/locales/cs.yml
+++ b/config/locales/cs.yml
@@ -1,37 +1,5 @@
 cs:
   social:
-    intro page:
-      main heading: "Diskuze & Objevování"
-      main description: "Nový způsob poznávání Bible s blízkými přáteli"
-      moment:
-        user aaron: "Adam Novotný"
-        user andy: "Jiří Kovář"
-        timestamp: "Před 5 dny"
-        title: "přidal záložku - Žalmy 31,7"
-        verse: "Jásat a radovat se budu z tvé lásky, že jsi pohlédl na mé trápení, žes poznal mou duši uprostřed úzkosti."
-        reference: "Žalmy 31,7"
-        discover:
-          copy: "Objevujte Bibli s přáteli, zvýrazňujte verše a přidávejte záložky nebo poznámky."
-          button: "Jak začít?"
-        share:
-          copy: "Diskutujte a přemýšlejte nad Písmem společně"
-          button: "Začněte vyhledáním svých přátel."
-        likes:
-          info: "a 4 další"
-        comments:
-          first:
-            text: "Přesně tohle jsem dnes potřeboval slyšet, díky. Ještě si napíšeme!"
-            time: "před 3 hodinami"
-          second:
-            text: "Amen, já taky. Právě ti posílám mail."
-            time: "před 27 minutami"
-          field placeholder: "Přidat komentář..."
-    widget:
-      timeline: "Timeline"
-      no activity yet: "Zatím zde nebyla žádná aktivita."
-    moment:
-      read all: "Zobrazit vše"
-      read less: "Zobrazit méně"
     share: "Sdílet"
     my connections: "Připojené účty"
     connected as: "Jste připojen/a ke službě %{connection} jako %{username}"
@@ -64,13 +32,9 @@ cs:
     users username not available: "Zadané uživatelské jméno není k dispozici."
     users username or password invalid: "Uživatelské jméno nebo heslo, které jste napsali, není správně."
     users username required: "Zde musíte zadat uživatelské jméno. "
-    users first name required: "Musíte zadat křestní jméno.\x04\x04"
-    users last name required: "Musíte zadat příjmení."
-    moments content required: "Obsah nemůže být prázdný."
   meta:
     kids_app:
       title: "Aplikace Bible pro děti"
-      description: "..."
     100million:
       title: "Začíná to se 100 milióny"
       description: "Aplikace Bible byla již nainstalována skoro 100 milionkrát -  je to neuvěřitelný historický milník. A to jsme ještě ani pořádně nezačali. Již dnes si stáhněte aplikaci Bible, která je zdarma - a pak sdílejte aplikaci se svými přáteli. Začněme společné tvořit dějiny. "
@@ -154,7 +118,6 @@ cs:
   find friends: "Najít přátele"
   search placeholder: "Vyhledat..."
   search: "Hledat"
-  more: "Více"
   book: "Kniha"
   filter book: "Filtrovat knihy..."
   save: "Uložit"
@@ -168,14 +131,17 @@ cs:
   chapter: "Kapitola"
   bible: "Bible"
   notes title: "Poznámky"
+  friends: "Přátelé"
   groups: "Skupiny"
   mobile: "Mobil"
   live: "Živě/Skupiny"
   first page: "První strana"
   last page: "Poslední strana"
+  next page: "Další stránka"
+  previous page: "Předchozí stránka"
   invalid username or password: "Neplatné uživatelské jméno nebo heslo."
   show all bookmarks: "Zobrazit všech %{total} záložek"
-  show all notes: "Zobrazit všechny poznámky"
+  show all notes: "Zobrazit všech %{total} poznámek"
   recent bookmarks: "Nedávné záložky"
   percentage display: "%{number}%"
   myself: "Já"
@@ -186,115 +152,7 @@ cs:
   or:
     lower: "nebo"
     upper: "NEBO"
-  moments:
-    vod:
-      title: "Verš dne"
-    friendship:
-      now friends: "Nyní se přátelíte s"
-    cta:
-      profile update text: "Pomozte svým přátelům vás najít."
-      profile update button: "Aktualizovat profil"
-      sharing text: "Sdílet verše na sociálních sítích"
-      sharing button: "Zapnout sdílení"
-      friends text: "Přečíst si v Bibli momenty vašich přátel"
-      friends button: "Najít přátelé"
-    action:
-      go to scripture: "Přejít k Písmu"
-      load more: "Načíst více"
-      like: "Líbí se"
-      liked: "To se mi líbí"
-      like title: "Líbí se mi"
-      last comment: "Poslední komentář"
-      share: "Sdílet"
-      share title: "Sdílet s přáteli nebo rodinou"
-      comment: "Komentovat"
-      comment title: "Zobrazit komentáře"
-      edit: "Upravit"
-      edit highlight title: "Upravit zvýraznění"
-      edit bookmark title: "Upravit záložku"
-      edit note title: "Upravit poznámku"
-      delete: "Odstranit"
-      delete confirm: "Jste si jistí?"
-      delete highlight title: "Smazat zvýraznění"
-      delete bookmark title: "Smazat záložku"
-      delete note title: "Smazat poznámku"
-  notifications:
-    title: "Oznámení"
-    none: "Nemáte žádná oznámení"
-    no new: "Žádná nová oznámení"
-    view all: "Vidět všechna oznámení"
-  likes:
-    create success: "Povedlo se! Vaše akce byla uložena"
-    create failure: "Váš like nemohl být uložen"
-    destroy success: "Like byl smazán"
-    destroy failure: "Váš like nemohl být smazán"
-  comments:
-    view all N: "Zobrazit %{count} komentáře/ů"
-    post comment: "Zveřejnit komentář"
-    create success: "Povedlo se! Přidali jste komentář."
-    create failure: "Komentář nelze zveřejnit"
-    destroy success: "Komentář smazán"
-    destroy failure: "Komentář nemohl být smazán"
-    form:
-      save button: "Příspěvek"
-  friends:
-    you have N friends: "Máte %{count} přátel"
-    none me: "Sdílejte vaše chvíle nad Biblí prostřednictvím záložek, zvýraznění a poznámek s vašimi nejbližšími přáteli a rodinou."
-    find friends: "Najít přátele"
-    blank slate:
-      heading: "Zatím nejste přátelé"
-      description: "Pro zobrazení přátel tohoto uživatele se musíte nejprve stát jeho přítelem."
-    limit notice: "Můžete mít nanejvýš 150 přátel"
-    limit description: "Omezení vašich přátelství v aplikaci Bible na lidi, které znáte, vytváří prostředí pro upřímné konverzace a společné objevování s blízkými přáteli."
-  friendships:
-    find friends title: "Najít přátele"
-    search by name: "Hledat podle jména"
-    search button: "Přejít"
-    widget:
-      find friends title: "Najít přátele"
-      search by name: "Hledat podle jména"
-      search button: "Přejít"
-    offer success: "Odeslána žádost o přátelství"
-    offer failure: "Nepodařilo se odeslat žádost o přátelství"
-    create success: "Povedlo se! Nyní jste přátelé."
-    create failure: "Chyba při vytváření přátelství"
-    destroy success: "Žádost byla odmítnuta"
-    destroy failure: "Chyba při rušení žádosti"
-    requests title: "Žádosti přátel"
-    requests view all: "Všechny žádosti o přátelství"
-    requests none: "Nemáte žádnou žádost o přátelství"
-    requests no new: "Žádné nové žádosti"
-    status:
-      pending: "Čekající žádost"
-      friends: "Přátelé"
-    user wants friendship: "%{user} chce být váš přítel"
-    user wants friendship partial: "chce být vašim přítelem"
-    form:
-      remove friend button: "Odstranit přítele"
-      remove friend button title: "Odstranit tuto osobu ze seznamu přátel"
-      add friend button: "Přidat přítele"
-      add friend button title: "Poslat uživateli %{user} žádost o přátelství"
-      accept button: "Přijmout"
-      accept request button: "Přijmout žádost"
-      ignore button: "Ignorovat"
-      ignore request button: "Ignorovat žádost"
   notes:
-    none user: "%{username} zatím neudělal žádnou poznámku."
-    blank slate:
-      heading: "Nemáte zatím žádné poznámky"
-      description: "Během čtení Bible je možné, že uslyšíte tichý Boží hlas, který k vám mluví. Své myšlenky si zde můžete rychle napsat. Vaše poznámky jsou automaticky označeny jako <em>soukromé</em>. Pokud byste je chtěli sdílet s přáteli, jednoduše stačí otevřít a změnit nastavení na <em>veřejné</em>."
-    form:
-      title field: "Nadpis:"
-      content field: "Obsah:"
-      highlight field: "Zvýraznit: (volitelné)"
-      reference field: "Odkaz(y):"
-      status field: "Status:"
-      save button: "Uložit"
-    status:
-      private: "Soukromé"
-      public: "Veřejné"
-      friends: "Pouze přátelé"
-      draft: "Koncept"
     list title: "Poznámky"
     loading community: "Načítání poznámek komunity..."
     no community notes: "Nenašly se žádné poznámky odkazující na vybrané verše. Abyste mohli vytvořit poznámku, tak vyberte verš v Bibli a pak zmáčkněte tlačítko \"Vybrané\", které je nahoře nad textem."
@@ -302,7 +160,6 @@ cs:
     private: "Soukromé"
     is private: "Požadovaná poznámka je soukromá."
     draft: "Koncept/y"
-    friends: "Přátelé"
     creation form errors: "Následující chyba zabránila vytvoření vaší poznámky:"
     reference field: "Odkaz(y):"
     version field: "Překlad:"
@@ -323,10 +180,7 @@ cs:
     cancel: "Zrušit"
     pop out: "Vyskočit"
     none found: "Žádné poznámky nenalezeny..."
-    create success: "Povedlo se! Poznámka byla uložena."
-    create failure: "Chyba při ukládání poznámky"
-    destroy success: "Poznámka smazána"
-    destroy failure: "Chyba během mazání poznámky"
+    successfully deleted: "Poznámka odstraněna"
   ref:
     loading secondary: "Načítají se odkazy v sekundárním překladu..."
     clear verses: "Zrušit označení veršů"
@@ -357,8 +211,6 @@ cs:
     profile form errors: "Následující chyba zabránila aktualizaci vašeho profilu:"
     email address: "E-mailová adresa"
     user name: "Uživatelské jméno"
-    first name: "Křestní jméno"
-    last name: "Příjmení"
     agreement: "Souhlasím s %{terms_link}."
     terms and conditions: "všeobecné podmínky"
     facebook sign up success: "Skvěle! Autorizovali jste se skrze Facebook. Nyní si zvolte YouVersion uživatelské jméno a heslo pro pokračování."
@@ -376,7 +228,6 @@ cs:
     my profile: "Můj profil"
     edit profile: "Nastavit profil"
     update profile: "Aktualizovat profil"
-    go to your profile: "Přejít na váš profil"
     other user profile: "Profil uživatele %{username}"
     my password: "Změnit moje heslo"
     edit password: "Změnit heslo"
@@ -389,7 +240,7 @@ cs:
     edit account_existence: "Smazat účet"
     delete account button: "Smazat můj YouVersion účet"
     no devices: "K vašemu YouVersion účtu nejsou připojená žádná zařízení"
-    no devices download copy: "Založeno na online Bibli YouVersion, aplikace Bible je zdarma pro mobily a může být instalována na téměř všechny mobilní telefony. Aplikace Bible umožňuje uživatelům číst Bibli, sdílet verše na sociálních sítích, zvýrazňovat oblíbené pasáže a více&mdash;vše ve formátu, který jde ruku v ruce s životním stylem uživatelů mobilních zařízení. Navštivte <a href='https://www.bible.com/app'>bible.com/app</a> z vašeho mobilního zařízení, stáhněte si aplikaci a připojte se k vašemu účtu!"
+    no devices download copy: "Aplikace Bible je zcela zdarma, je založená na on-line Bibli YouVersion a je ji možno nainstalovat skoro na jakýkoli mobilní telefon. Aplikace Bible umožňuje svým uživatelům číst Bibli, sdílet verše na sociální sítě, vytvářet si záložky ze svých oblíbených pasáží a více&mdash;vše ve formátu, který drží krok s narůstajícím mobilním způsobem života. Navštivte <a href='http://www.youversion.com/download'>youversion.com/download</a> přímo z vašeho mobilního zařízení, stáhněte si aplikaci Bible a připojte si svůj uživatelský účet!"
     yes delete: "Ano, smazat můj účet"
     account delete success: "Váš YouVersion účet byl úspěšně vymazán. Doufáme, že budete mít stále další způsoby, jak přijít do kontaktu s Biblí. Některé z těchto aplikacích vám mohou pomoci, až budete pokračovat: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
     delete account description: "Pokud si smažete váš účet, ztratíte veškeré své informace, historii a údaje (jako poznámky, záložky, zvýraznění atd.) z YouVersion a aplikace Bible. Tento krok již nemůžete vzít zpět. Pokud si jste jistí, pokračujte níže."
@@ -504,16 +355,6 @@ cs:
       general title: "do not translate"
       general text: "do not translate"
     profile:
-      blank slate:
-        heading: "Pokračuj, není tu nic k vidění (zatím)"
-        description: "Začněte pracovat s Biblí, anebo komunikovat s přáteli a na této stránce se vám zobrazí historie toho, co již máte za sebou."
-      visit friend: "Navštivit profil uživatele %{friend}"
-      tab activity: "Aktivita"
-      tab friends: "Přátelé"
-      tab notes: "Poznámky"
-      tab bookmarks: "Záložky"
-      tab highlights: "Zvýraznění"
-      tab badges: "Odznaky"
       first name: "Křestní jméno"
       last name: "Příjmení"
       email: "E-mailová adresa"
@@ -553,10 +394,6 @@ cs:
       reading_plans: "Upozorňovat mě na informace pro plány čtení, které jsem začal/a."
       publishing partners: "Informujte mě o novinkách od partnerů obsahu YouVersion."
       update: "Upozornění na aktualizace"
-      friendships: "Chci oznámit žádosti přátel"
-      moments: "Chci oznámení o aktivitě přátel"
-      comments: "Chci oznámení komentářů mých aktivit"
-      likes: "Upozorňovat, když si někdo oblíbí moji aktivitu"
   bookmarks:
     new: "Nová záložka"
     edit: "Upravit"
@@ -567,14 +404,12 @@ cs:
     all: "Vše"
     labels label: "Štítky:"
     title: "Záložky"
-    my labels: "Moje štítky"
     not found: "Záložky vám dají rychlý přehled vašich oblíbených pasáží nebo poslední kapitolu, kterou jste četli v dané knize. Pro přidání záložky zvolte verš v prohlížení Bible a klikněte na tlačítko v horní části prohlížeče."
     other user not found: "Uživatel %{username} zatím neuložil žádné záložky."
     creation form errors: "Následující chyby neumožnily vytvořit záložku:"
-    create success: "Povedlo se! Záložka byla uložena."
-    destroy success: "Záložka odstraněna"
-    destroy failure: "Chyba při odstraňování záložky"
-    update success: "Záložka aktualizována"
+    successfully created: "Přidána záložka"
+    successfully deleted: "Záložka byla odstraněna"
+    successfully updated: "Záložka aktualizována"
     labels placeholder: "Více štítků oddělte čárkami."
     save: "Uložit záložku"
     confirm delete: "Ano, jsem si jistý/á"
@@ -585,36 +420,10 @@ cs:
     update: "Aktualizovat"
     color: "Barva:"
     version field: "Překlad:"
-    none user: "%{username} nemá záložky"
-    blank slate:
-      heading: "Založte si své oblíbené verše"
-      description: "Během čtení Bible můžete označovat verše a vytvářet z nich záložky. Zde můžete záložky kdykoliv prohlížet, upravovat nebo mazat."
-    form:
-      title field: "Nadpis:"
-      reference field: "Odkaz:"
-      labels field: "Štítky (oddělené čárkou):"
-      highlight field: "Zvýraznit: (volitelné)"
-      colors field: "Barva:"
-      update button: "Aktualizovat záložku"
-      save button: "Uložit záložku"
   badges:
     earned a badge: "Získán odznak"
     user badges: "Odznaky uživatele %{user}"
-    earned date: "Získáno uživatelem %{username} před %{ago}"
-    none me: "Zatím jste nezískali žádné odznaky."
-    none user: "%{username} zatím nezískal žádné odznaky."
   plans:
-    widget:
-      my plans: "Moje plány"
-      start reading: "Začít číst"
-      view my plans: "Zobrazit moje plány"
-      featured plans: "Doporučené plány"
-      view all plans: "Zobrazit všechny plány"
-    settings: "Nastavení"
-    privacy:
-      visible to friends?: "Chcete, aby se vaše aktivita v tomto plánu zobrazovala vašim přátelům?"
-      private: "Soukromé"
-      public: "Veřejné"
     title: "Plány čtení"
     browse by category: "Prohlížet podle kategorie"
     browse plans: "Procházet plány v kategorii %{category}"
@@ -645,6 +454,7 @@ cs:
     no public plans: "Žádné viditelné plány uživatele %{username}."
     filter by lang: "Filtrovat plány čtení podle jazyků"
     plan settings: "Nastavení plánu"
+    settings: "Nastavení"
     search: "Hledat"
     search placeholder: "Vyhledat plány kategorie %{category}"
     subscribe to plan: "Začít tento plán čtení"
@@ -757,29 +567,17 @@ cs:
     chapter only: "Omlouváme se, ale audio funkce není dostupná pro jednotlivé verše. Začněte číst kapitolu od začátku a tato funkce vám bude nabídnuta. "
     close player menu: "Zavřít"
   highlights:
-    title: "Zvýraznění"
-    blank slate:
-      heading: "Zvýrazňujte vaše oblíbené verše"
-      description: "Během čtení Bible si můžete vybrané verše zvýraznit. Zde můžete svá zvýraznění kdykoliv prohlížet, editovat nebo mazat."
-    none user: "%{username} nemá žádné zvýraznění"
     choose color: "Vyberte barvu"
-    create success: "Povedlo se! Zvýraznění bylo uloženo."
-    create failure: "Chyba při ukládání zvýraznění"
-    destroy success: "Zvýraznění smazáno"
-    destroy failure: "Chyba při odstraňování zvýraznění"
     creation error: "Omlouváme se, nepodařilo se zvýraznění."
     delete error: "Omlouváme se, nepodařilo se odstranit zvýraznění."
-    form:
-      save button: "Uložit zvýraznění"
   searching:
     bible: "Bible"
-    plans: "Plány"
+    plans: "Plány čtení"
     users: "Uživatelé"
     notes: "Poznámky"
     total results: "Přibližně %{total} výsledků"
     suggestion html: "Mysleli jste %{suggestion_link}?"
     all versions: "Všechny překlady v jazyce: %{language_name}"
-    results for: "Výsledky vyhledávání:"
   donate:
     donate now: "Darovat nyní"
     donate now intl: "nebo darujte mezinárodně"
@@ -949,6 +747,9 @@ cs:
     public domain: "Veřejná doména"
     loading: "Načítání více překladů..."
     load error: "Omlouváme se, nepodařilo se načíst více překladů. Zavřete toto menu a otevřte jej znovu."
+  reader help:
+    title: "Vybrat verš..."
+    line 1: "Klikněte nebo se dotkněte jakéhokoli verše nebo souboru veršů a vytvořte záložku, zvýraznění, poznámku nebo to sdílejte s vašimi přáteli!"
   campaigns:
     100m:
       logo: "YouVersion: Aplikace Bible"
@@ -978,9 +779,3 @@ cs:
       sidebar:
         tagline: "Buďme těmi, kteří tvoří dějiny."
         button: "Sdílej aplikaci Bible"
-  ui:
-    pagination:
-      next page: "Další stránka"
-      previous page: "Předchozí stránka"
-    datetime:
-      just now: "právě teď"
