--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1,37 +1,5 @@
 de:
   social:
-    intro page:
-      main heading: "Unterhaltung & Entdeckung"
-      main description: "Entdecke die Bibel auf eine neue Weise - mit guten Freunden"
-      moment:
-        user aaron: "Aaron Stahl"
-        user andy: "Andreas Ritter"
-        timestamp: "vor 5 Tagen"
-        title: "hat ein Lesezeichen für Psalm 31,8 angelegt."
-        verse: "Ich juble vor Freude, weil du mich liebst. Dir ist meine Not nicht entgangen; du hast erkannt, wie niedergeschlagen ich bin."
-        reference: "Psalm 31,8"
-        discover:
-          copy: "Entdecke Neues und lerne mit deinen Freunden, wenn sie Verse markieren, Lesezeichen setzen und Notizen hinzufügen."
-          button: "Wo fange ich an?"
-        share:
-          copy: "Tauscht euch offen über die Bibel aus."
-          button: "Suche dir erst einmal ein paar Freunde."
-        likes:
-          info: "und 4 weiteren gefällt das"
-        comments:
-          first:
-            text: "Das habe ich heute gebracht! Danke dir. Lass uns bald mal telefonieren!"
-            time: "vor etwa 3 Stunden"
-          second:
-            text: "Amen, ich auch! Habe dir gerade eine E-Mail geschickt!"
-            time: "vor etwa 27 Minuten"
-          field placeholder: "Schreibe einen Kommentar..."
-    widget:
-      timeline: "Chronik"
-      no activity yet: "Bis jetzt gab es keine Aktivitäten."
-    moment:
-      read all: "Alle lesen"
-      read less: "Lies weniger"
     share: "Teilen"
     my connections: "Verbundene Benutzerkonten"
     connected as: "Du bist mit %{connection} als %{username} verbunden."
@@ -64,13 +32,9 @@ de:
     users username not available: "Der eingegebene Benutzername ist nicht verfügbar."
     users username or password invalid: "Benutzername oder Passwort ungültig."
     users username required: "Du musst einen Benutzernamen eingeben."
-    users first name required: "Du musst deinen Vornamen eingeben."
-    users last name required: "Du musst deinen Nachnamen eingeben. "
-    moments content required: "Feld darf nicht leer sein."
   meta:
     kids_app:
       title: "Die Bible App for Kids"
-      description: "..."
     100million:
       title: "Es fängt mit 100 Mio. an."
       description: "Die Bibel App ist schon fast 100 Mio. Mal installiert worden - ein unbeschreiblicher Meilenstein! Aber jetzt fangen wir erst richtig. Lade dir die kostenlose Bibel App heute herunter - und dann teile sie mit deinen Freunden. Lass uns zusammen Geschichte schreiben."
@@ -154,7 +118,6 @@ de:
   find friends: "Freunde finden"
   search placeholder: "Suche..."
   search: "Suche"
-  more: "Mehr "
   book: "Buch"
   filter book: "Bücher durchsuchen..."
   save: "Speichern"
@@ -168,14 +131,17 @@ de:
   chapter: "Kapitel"
   bible: "Bibel"
   notes title: "Notizen"
+  friends: "Freunde"
   groups: "Gruppen"
   mobile: "Mobil"
   live: "Live/Gruppen"
   first page: "erste Seite"
   last page: "letzte Seite"
+  next page: "nächste Seite"
+  previous page: "vorherige Seite"
   invalid username or password: "Benutzername oder Passwort ungültig"
   show all bookmarks: "Alle %{total} Lesezeichen anzeigen"
-  show all notes: "Alle Notizen anzeigen"
+  show all notes: "Alle %{total} Notizen anzeigen"
   recent bookmarks: "Neueste Lesezeichen"
   percentage display: "%{number}%"
   myself: "Ich"
@@ -186,123 +152,14 @@ de:
   or:
     lower: "oder"
     upper: "ODER:"
-  moments:
-    vod:
-      title: "Vers des Tages "
-    friendship:
-      now friends: "Du bist jetzt befreundet mit"
-    cta:
-      profile update text: "Hilf deinen Freunden, dich zu finden."
-      profile update button: "Aktualisiere dein Profil"
-      sharing text: "Teile Verse mit sozialen Netzwerken "
-      sharing button: "Erlaube das Teilen"
-      friends text: "Schau dir die Bibel-Momente von deinen Freunden an."
-      friends button: "Finde Freunde"
-    action:
-      go to scripture: "Zur Schriftstelle wechseln"
-      load more: "Mehr laden"
-      like: "Gefällt mir"
-      liked: "Gefällt"
-      like title: "Tippe auf \"Gefällt mir\""
-      last comment: "Jüngster Kommentar"
-      share: "Teilen"
-      share title: "Teile das mit deinen Freunden oder deiner Familie "
-      comment: "Kommentar"
-      comment title: "Sieh dir alle Kommentare an"
-      edit: "Bearbeiten"
-      edit highlight title: "Diese Markierung bearbeiten"
-      edit bookmark title: "Dieses Lesezeichen bearbeiten"
-      edit note title: "Diese Notiz bearbeiten"
-      delete: "Löschen"
-      delete confirm: "Bist du sicher?"
-      delete highlight title: "Diese Markierung löschen"
-      delete bookmark title: "Dieses Lesezeichen löschen"
-      delete note title: "Diese Notiz löschen"
-  notifications:
-    title: "Benachrichtigungen"
-    none: "Du hast keine Benachrichtigungen"
-    no new: "Keine neuen Benachrichtigungen"
-    view all: "Alle Benachrichtigungen anschauen"
-  likes:
-    create success: "Super! Dein \"Gefällt mir\" wurde gespeichert."
-    create failure: "Dein \"Gefällt mir\" konnte nicht gespeichert werden"
-    destroy success: "\"Gefällt mir\" entfernt"
-    destroy failure: "Dein \"Gefällt mir\" konnte nicht gelöscht werden"
-  comments:
-    view all N: "Alle %{count} Kommentare zeigen"
-    post comment: "Einen Kommentar posten"
-    create success: "Super! Dein Kommentar wurde gepostet."
-    create failure: "Der Kommentar konnte nicht gepostet werden"
-    destroy success: "Kommentar gelöscht"
-    destroy failure: "Kommentar konnte nicht gelöscht werden"
-    form:
-      save button: "Posten"
-  friends:
-    you have N friends: "Du hast %{count} Freunde"
-    none me: "Teile deine Momente in der Bibel, zum Beispiel in Form von Lesezeichen, Markierungen und Notizen mit deinen engsten Freunden und deiner Familie. "
-    find friends: "Finde Freunde"
-    blank slate:
-      heading: "Derzeit nicht befreundet"
-      description: "Du musst mit jemandem befreundet sein, um dessen Freunde sehen zu können."
-    limit notice: "Du kannst bis zu 150 Freunde haben"
-    limit description: "Wenn du deine Freundschaften in der Bibel App auf Menschen begrenzt, die du kennst, schafft das eine Umgebung für ehrliche Gespräche und zum Teilen von Erfahrungen mit guten Freunden."
-  friendships:
-    find friends title: "Finde Freunde"
-    search by name: "Nach Namen suchen"
-    search button: "Los geht's"
-    widget:
-      find friends title: "Finde Freunde"
-      search by name: "Suche nach Namen"
-      search button: "Los geht's"
-    offer success: "Freundschaftsanfrage versendet"
-    offer failure: "Fehler beim Versenden der Freundschaftsanfrage"
-    create success: "Super! Ihr seid jetzt befreundet."
-    create failure: "Fehler bei Freundschaftsanfrage"
-    destroy success: "Anfrage abgelehnt"
-    destroy failure: "Fehler beim Ablehnen der Freundschaftsanfrage"
-    requests title: "Freundschaftsanfragen"
-    requests view all: "Alle Freundschaftsanfragen anschauen"
-    requests none: "Du hast keine Freundschaftsanfragen"
-    requests no new: "Keine neuen Anfragen"
-    status:
-      pending: "Offene Anfrage"
-      friends: "Freunde"
-    user wants friendship: "%{user} möchte mit dir befreundet sein"
-    user wants friendship partial: "möchte mit dir befreundet sein"
-    form:
-      remove friend button: "Freund entfernen"
-      remove friend button title: "Entferne diese Person von deiner Freundesliste "
-      add friend button: "Als Freund/in hinzufügen"
-      add friend button title: "Sende %{user} eine Freundschaftsanfrage"
-      accept button: "Annehmen"
-      accept request button: "Anfrage akzeptieren"
-      ignore button: "Ignorieren"
-      ignore request button: "Freundschaftsanfrage ignorieren"
   notes:
-    none user: "%{username} hat bisher keine Notizen gemacht"
-    blank slate:
-      heading: "Du hast bisher noch keine Notizen"
-      description: "Wenn du Gottes ruhige, sanfte Stimme während des Bibellesens spürst, kannst du deine Gedanken hier schnell aufschreiben. Deine Notizen werden standardmäßig <em>als privat</em> markiert. Wenn du magst, kannst du eine Notiz deinen Freunden mitteilen. Öffne sie einfach und ändere den Status zu <em>öffentlich</em>."
-    form:
-      title field: "Titel:"
-      content field: "Inhalt:"
-      highlight field: "Hervorheben (optional)"
-      reference field: "Bibelstelle(n):"
-      status field: "Status:"
-      save button: "Speichern"
-    status:
-      private: "Privat"
-      public: "Öffentlich"
-      friends: "Nur Freunde"
-      draft: "Entwurf"
     list title: "Notizen"
     loading community: "Lade Gemeinschaftsnotizen... "
-    no community notes: "Es wurden keine Gemeinschaftsnotizen zu diesen Versen gefunden. Um eine Notiz anzulegen, wähle einen Vers in der Leseansicht und dann klicke oben in der Leseansicht auf \"Auswählen\"."
+    no community notes: "Es wurden keine Gemeinschaftsnotizen zu diesen Versen gefunden. Um eine Notiz anzulegen, wähle einen Vers in der Leseansicht und klicke dann oben in der Leseansicht auf \"Auswählen\"."
     public: "Öffentlich"
     private: "Privat"
     is private: "Die angeforderte Notiz ist privat."
     draft: "Entwurf"
-    friends: "Freunde"
     creation form errors: "Wegen dem/der folgende(n) Fehler konntest du keine Notiz anlegen. "
     reference field: "Bibelstelle(n):"
     version field: "Übersetzung:"
@@ -323,10 +180,7 @@ de:
     cancel: "Abbrechen"
     pop out: "In neuem Fenster anzeigen."
     none found: "Keine Notizen vorhanden"
-    create success: "Super! Deine Notiz wurde gespeichert."
-    create failure: "Fehler beim Speichern der Notiz "
-    destroy success: "Notiz gelöscht"
-    destroy failure: "Fehler beim Löschen der Notiz"
+    successfully deleted: "Notiz entfernt"
   ref:
     loading secondary: "Schriftstelle wird in der 2. Bibelversion geladen..."
     clear verses: "Hervorhebung der Verse aufheben"
@@ -357,8 +211,6 @@ de:
     profile form errors: "Aufgrund des folgenden Fehlers konnte dein Profil nicht aktualisiert werden:"
     email address: "E-Mail-Adresse"
     user name: "Benutzername"
-    first name: "Vorname"
-    last name: "Nachname"
     agreement: "Ich stimme den %{terms_link} von YouVersion zu."
     terms and conditions: "Allgemeine Geschäftsbedingungen"
     facebook sign up success: "Super! Du hast dich über Facebook autorisiert. Wähle einen Benutzernamen und ein Passwort für YouVersion, um weiterzumachen."
@@ -376,7 +228,6 @@ de:
     my profile: "Mein Profil"
     edit profile: "Profil bearbeiten"
     update profile: "Profil aktualisieren"
-    go to your profile: "Zum eigenen Profil"
     other user profile: "%{username}s Profil"
     my password: "Mein Passwort ändern"
     edit password: "Passwort ändern"
@@ -389,7 +240,7 @@ de:
     edit account_existence: "Konto löschen"
     delete account button: "Mein YouVersion Konto löschen"
     no devices: "Dein YouVersion-Konto ist mit keinem mobilen Gerät verbunden."
-    no devices download copy: "Die Bibel App basiert auf der Online-Bibel von YouVersion.com und ist eine kostenlose, mobile Bibel, die auf fast allen Smartphones installiert werden kann. Die Bibel App gestattet es ihren Lesern, die Bibel zu lesen, Verse in sozialen Netzwerken zu teilen, Lieblingsschriftstellen mit Lesezeichen zu versehen u.v.m. All das in einem Format, das zu ihrem ständig mobiler werdenden Lebensstil passt. Geh mit deinem Smartphone zu <a href='https://www.bible.com/app'>bible.com/app</a>, um die Bibel App herunterzuladen und melde dich einfach mit deinem Konto an!"
+    no devices download copy: "Die Bibel App basiert auf der Online-Bibel von YouVersion.com und ist eine kostenlose mobile Bibel, die auf fast allen Smartphones installiert werden kann. Die Bibel App ermöglicht es ihren Lesern nicht nur, die Bibel zu lesen, sondern auch u. a. auch Verse in sozialen Netzwerken zu teilen und Lieblingsschriftstellen mit Lesezeichen zu versehen - und zwar alles in einem Format, das zu heutigen Lebensstil passt, der immer mobiler wird. Geh auf deinem Smartphone zu <a href='https://www.bible.com/download'>bible.com/download</a>, um die Bibel App herunterzuladen und melde dich einfach mit deinem Konto an!"
     yes delete: "Ja, mein Konto löschen"
     account delete success: "Dein YouVersion-Konto wurde erfolgreich gelöscht. Wir hoffen, dass du andere Möglichkeiten nutzen wirst, um dich mit der Bibel zu beschäftigen. Die folgenden Apps beispielsweise könnten dazu hilfreich sein: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
     delete account description: "Wenn du dein Konto löschst, werden alle deine Informationen, deine gesamte Historie sowie deine persönlichen Eintragungen (wie Notizen, Lesezeichen, Markierungen etc.) innerhalb von YouVersion.com und in der Bibel App gelöscht. Diese Aktion kann weder von dir noch von unserem Team rückgängig gemacht werden. Wenn du dir sicher bist, kannst du unten fortfahren."
@@ -504,16 +355,6 @@ de:
       general title: "Allgemeine Informationen"
       general text: "Vollständige Vereinbarung. Diese NUTZERBEDINGUNGEN stellen die vollständige Vereinbarung zwischen dir und LifeChurch.tv dar und regeln die Art und Weise, wie du YouVersion benutzen sollst; sie löst alle vorherigen Vereinbarungen zwischen dir und LifeChurch.tv hinsichtlich von YouVersion auf."
     profile:
-      blank slate:
-        heading: "Geh weiter, hier gibt's (noch) nichts zu sehen."
-        description: "Wenn du anfängst, dich mit der Bibel zu beschäftigen oder mit deinen Freunden zu interagieren, wirst du auf dieser Seite die Historie dessen sehen, was du so gemachst hast."
-      visit friend: "Besuche das Profil von %{friend} "
-      tab activity: "Aktivitäten"
-      tab friends: "Freunde"
-      tab notes: "Notizen"
-      tab bookmarks: "Lesezeichen"
-      tab highlights: "Markierungen"
-      tab badges: "Abzeichen"
       first name: "Vorname"
       last name: "Nachname"
       email: "E-Mail-Adresse"
@@ -553,10 +394,6 @@ de:
       reading_plans: "Benachrichtigt mich über meine abonnierten Lesepläne."
       publishing partners: "Sendet mir bitte Nachrichten über den Inhalt von Partnern von YouVersion."
       update: "Benachrichtigungen aktualisieren"
-      friendships: "Benachrichtige mich über Freundschaftsanfragen"
-      moments: "Benachrichtige mich über die Aktivitäten von Freunden"
-      comments: "Benachrichtige mich über Kommentare zu meinen Aktivitäten"
-      likes: "Benachrichtige mich, wenn jemandem meine Aktivitäten gefallen."
   bookmarks:
     new: "Neues Lesezeichen"
     edit: "Bearbeiten"
@@ -567,14 +404,12 @@ de:
     all: "Alle"
     labels label: "Etiketten:"
     title: "Lesezeichen"
-    my labels: "Meine Etiketten"
     not found: "Lesezeichen geben dir eine Übersicht über deine Lieblingsstellen oder bringen dich wieder zu dem Kapitel, das du zuletzt gelesen hast. Um ein Lesezeichen hinzuzufügen, wähle den gewünschten Vers in der Leseansicht und klicke oben auf \"Ausgewählt\"."
     other user not found: "%{username} hat bisher keine Lesezeichen gespeichert."
     creation form errors: "Folgende(r) Fehler verhindern die Erstellung deines Lesezeichens:"
-    create success: "Super! Dein Lesezeichen wurde gespeichert."
-    destroy success: "Lesezeichen entfernt"
-    destroy failure: "Fehler beim Löschen des Lesezeichens "
-    update success: "Lesezeichen aktualisiert"
+    successfully created: "Lesezeichen hinzugefügt"
+    successfully deleted: "Lesezeichen entfernt"
+    successfully updated: "Lesezeichen aktualisiert"
     labels placeholder: "Verschiedene Stichwörter durch Kommata trennen."
     save: "Lesezeichen speichern"
     confirm delete: "Ja, ich bin sicher."
@@ -585,36 +420,10 @@ de:
     update: "Aktualisieren"
     color: "Farbe:"
     version field: "Übersetzung:"
-    none user: "%{username} hat noch keine Lesezeichen"
-    blank slate:
-      heading: "Setze Lesezeichen bei Versen, die dich ansprechen"
-      description: "Während du die Bibel liest, wähle einen Vers und markiere ihn. Kehre hierher zurück, um deine Lesezeichen anzusehen, zu bearbeiten oder zu löschen."
-    form:
-      title field: "Titel:"
-      reference field: "Bibelstelle:"
-      labels field: "Stichwörter (durch Komma getrennt):"
-      highlight field: "Hervorheben: (optional)"
-      colors field: "Farbe:"
-      update button: "Lesezeichen aktualisieren"
-      save button: "Lesezeichen speichern"
   badges:
     earned a badge: "Abzeichen verdient"
     user badges: "Abzeichen von %{user}"
-    earned date: "Verliehen an %{username} vor %{ago}"
-    none me: "Du hast bisher keine Abzeichen bekommen."
-    none user: "%{username} hat bisher keine Abzeichen bekommen."
   plans:
-    widget:
-      my plans: "Meine Lesepläne"
-      start reading: "Fang an zu lesen. "
-      view my plans: "Meine Lesepläne anschauen"
-      featured plans: "Empfohlene Lesepläne"
-      view all plans: "Alle Lesepläne anschauen"
-    settings: "Einstellungen"
-    privacy:
-      visible to friends?: "Soll das, was du in deinem Leseplan machst, für deine Freunde sichtbar sein?"
-      private: "Privat"
-      public: "Öffentlich"
     title: "Lesepläne"
     browse by category: "Kategorien anschauen"
     browse plans: "%{category} Lesepläne anschauen"
@@ -645,6 +454,7 @@ de:
     no public plans: "Von %{username} ist kein Leseplan sichtbar."
     filter by lang: "Lesepläne nach Sprachen filtern"
     plan settings: "Leseplaneinstellungen"
+    settings: "Einstellungen"
     search: "Suche"
     search placeholder: "Durchsuche %{category} Lesepläne"
     subscribe to plan: "Diesen Leseplan beginnen"
@@ -757,20 +567,9 @@ de:
     chapter only: "Sorry, Audiodateien gibt es nur pro Kapitel. Gehe zur Leseansicht, um das Kapitel anzuhören. "
     close player menu: "Schließen"
   highlights:
-    title: "Markierungen"
-    blank slate:
-      heading: "Markiere Verse, die dir wichtig sind"
-      description: "Wähle beim Lesen der Bibel einen Vers aus und markiere ihn. Hier kannst du deine Markierungen später ansehen, ändern oder löschen."
-    none user: "%{username} hat noch nichts markiert"
     choose color: "Wähle eine Farbe. "
-    create success: "Super! Deine Markierung wurde gespeichert."
-    create failure: "Fehler beim Speichern der Markierung"
-    destroy success: "Markierung gelöscht"
-    destroy failure: "Fehler beim Löschen der Markierung"
     creation error: "Entschuldigung, das Markieren hat nicht geklappt. "
     delete error: "Sorry, die Markierung konnte nicht entfernt werden."
-    form:
-      save button: "Markierungen speichern"
   searching:
     bible: "Bibel"
     plans: "Lesepläne"
@@ -779,7 +578,6 @@ de:
     total results: "Ungefähr %{total} Ergebnisse"
     suggestion html: "Meintest du %{suggestion_link}?"
     all versions: "Alle %{language_name}en Übersetzungen"
-    results for: "Suche Ergebnisse für:"
   donate:
     donate now: "Jetzt spenden"
     donate now intl: "oder von außerhalb der USA spenden"
@@ -949,6 +747,9 @@ de:
     public domain: "Gemeinfrei"
     loading: "Lade weitere Übersetzungen..."
     load error: "Leider gab es ein Problem beim Laden weiterer Übersetzungen. Schließe dieses Menü und öffne es erneut, um es noch einmal zu versuchen."
+  reader help:
+    title: "Wähle einen Vers..."
+    line 1: "Klicke oder tippe auf einen Vers oder eine Sammlung von Versen, um Lesezeichen zu erstellen, zum Markieren, um eine Notiz zu erstellen oder mit deinen Freunden zu teilen!"
   campaigns:
     100m:
       logo: "YouVersion: Die Bibel App"
@@ -978,9 +779,3 @@ de:
       sidebar:
         tagline: "Lass uns Geschichte schreiben."
         button: "Teile die Bibel App."
-  ui:
-    pagination:
-      next page: "nächste Seite"
-      previous page: "vorherige Seite"
-    datetime:
-      just now: "gerade eben"
