--- a/config/locales/fi.yml
+++ b/config/locales/fi.yml
@@ -1,37 +1,5 @@
 fi:
   social:
-    intro page:
-      main heading: "Keskustelut ja oivallukset"
-      main description: "Uusi tapa tutkia Raamattua luotettujen ystävien kanssa"
-      moment:
-        user aaron: "Juhani Korhonen"
-        user andy: "Johannes Virtanen"
-        timestamp: "5 päivää sitten"
-        title: "loi kirjanmerkin Psalmista 31:8"
-        verse: "Iloitsen ja riemuitsen sinun hyvyydestäsi. Sinä näet minun hätäni, tiedät kaiken tuskani."
-        reference: "Psalmi 31:8"
-        discover:
-          copy: "Löydä ja opi uutta ystäviesi kanssa, kun he lisäävät korostuksia, kirjanmerkkejä ja muistiinpanoja."
-          button: "Mistä voin aloittaa?"
-        share:
-          copy: "Jaa rehellisiä keskusteluja Sanasta."
-          button: "Aloita löytämällä muutamia ystäviä."
-        likes:
-          info: "ja 4 muuta tykkää tästä"
-        comments:
-          first:
-            text: "Minun piti todalla kuulla tämä tänään, kiitos. Pikaisiin kulumisiin!"
-            time: "noin 3 tuntia sitten"
-          second:
-            text: "Aamen, niin minäkin. Lähetän sinulle nyt sähköpostia."
-            time: "noin 27 minuuttia sitten"
-          field placeholder: "Kirjoita kommentti..."
-    widget:
-      timeline: "Aikajana"
-      no activity yet: "Toimintaa ei ole vielä ollut."
-    moment:
-      read all: "Lue kaikki"
-      read less: "Näytä vähemmän"
     share: "Jaa"
     my connections: "Yhdistetyt tilit"
     connected as: "Sinut on yhdistetty kohteeseen %{connection} käyttäjänimellä %{username}."
@@ -64,13 +32,9 @@ fi:
     users username not available: "Syöttämäsi käyttäjänimi ei ole vapaana."
     users username or password invalid: "Syöttämäsi käyttäjänimi tai salasana on virheellinen."
     users username required: "Käytäjänimi täytyy syöttää."
-    users first name required: "Etunimi täytyy syöttää."
-    users last name required: "Sukunimi täytyy syöttää."
-    moments content required: "Sisältö puuttuu."
   meta:
     kids_app:
       title: "Raamattusovellus lapsille"
-      description: "..."
     100million:
       title: "Se alkaa 100 miljoonalla"
       description: "Raamattusovellus on asennettu lähes 100 miljoonaa kertaa - hieno merkkipaalu! Mutta me olemme vasta pääsemässä alkuun. Lataa ilmainen Raamattusovellus tänään - ja jaa se kavereidesi kanssa. Tehdään historiaa yhdessä."
@@ -154,7 +118,6 @@ fi:
   find friends: "Etsi ystäviä"
   search placeholder: "Haku..."
   search: "Hae"
-  more: "Lisää"
   book: "Kirja"
   filter book: "Suodata kirjoja..."
   save: "Tallenna"
@@ -168,14 +131,17 @@ fi:
   chapter: "Luku"
   bible: "Raamattu"
   notes title: "Muistiinpanot"
+  friends: "Ystävät"
   groups: "Ryhmät"
   mobile: "Mobiili"
   live: "Live/Ryhmät"
   first page: "Ensimmäinen sivu"
   last page: "Viimeinen sivu"
+  next page: "Seuraava sivu"
+  previous page: "Edellinen sivu"
   invalid username or password: "Virheellinen käyttäjänimi tai salasana."
   show all bookmarks: "Näytä kaikki %{total} kirjanmerkkiä"
-  show all notes: "Näytä kaikki muistiinpanot"
+  show all notes: "Katso kaikki %{total} muistiinpanoa"
   recent bookmarks: "Viimeisimmät kirjanmerkit"
   percentage display: "%{number}%"
   myself: "Minä"
@@ -186,115 +152,7 @@ fi:
   or:
     lower: "tai"
     upper: "TAI"
-  moments:
-    vod:
-      title: "Päivän jae"
-    friendship:
-      now friends: "Seuraavan käyttäjä on nyt ystäväsi:"
-    cta:
-      profile update text: "Auta ystäviäsi löytämään sinut."
-      profile update button: "Päivitä profiilisi"
-      sharing text: "Jaa kohtia sosiaalisissa verkostoissa"
-      sharing button: "Salli jakaminen"
-      friends text: "Näe ystäviesi hetket Raamatussa."
-      friends button: "Löydä ystäviä"
-    action:
-      go to scripture: "Mene raamatunkohtaan"
-      load more: "Lataa lisää"
-      like: "Tykkää"
-      liked: "Tykätty"
-      like title: "Tykkää tästä"
-      last comment: "Viimeinen kommentti"
-      share: "Jaa"
-      share title: "Jaa ystävien tai perheen kanssa"
-      comment: "Kommentoi"
-      comment title: "Näytä kaikki kommentit"
-      edit: "Muokkaa"
-      edit highlight title: "Muokkaa tätä korostusta"
-      edit bookmark title: "Muokkaa tätä kirjanmerkkiä"
-      edit note title: "Muokkaa tätä muistiinpanoa"
-      delete: "Poista"
-      delete confirm: "Oletko varma?"
-      delete highlight title: "Poista tämä korostus"
-      delete bookmark title: "Poista tämä kirjanmerkki"
-      delete note title: "Poista tämä muistiinpano"
-  notifications:
-    title: "Ilmoitukset"
-    none: "Ei ilmoituksia"
-    no new: "Ei uusia ilmoituksia"
-    view all: "Näytä kaikki ilmoitukset"
-  likes:
-    create success: "OK! Tykkäyksesi on tallennettu"
-    create failure: "Tykkäystäsi ei voitu tallentaa"
-    destroy success: "Tykkäys poistettu"
-    destroy failure: "Tykkäystäsi ei voitu poistaa"
-  comments:
-    view all N: "Näytä kaikki %{count} kommenttia"
-    post comment: "Lähetä kommentti"
-    create success: "OK! Kommenttisi lähetettiin."
-    create failure: "Kommenttia ei voitu lähettää"
-    destroy success: "Kommentti poistettu"
-    destroy failure: "Kommenttia ei voitu poistaa"
-    form:
-      save button: "Lähetä"
-  friends:
-    you have N friends: "Sinulla on %{count}  ystävää"
-    none me: "Jaa merkintäsi Raamatussa, kuten kirjanmerkit, korostukset ja muistiinpanot lähimpien ystäviesi ja perheenjäsentesi kanssa."
-    find friends: "Etsi ystäviä"
-    blank slate:
-      heading: "Ei ystäviä tällä hetkellä"
-      description: "Sinun täytyy olla tämän henkilön ystävä nähdäksesi hänen ystävänsä."
-    limit notice: "Sinulla voi olla jopa 150 ystävää"
-    limit description: "Voit rajata ystävyyssuhteet Raamattusovelluksessa ihmisiin jotka tunnet hyvin. Näin syntyy ympäristö jossa voi keskustella ja jakaa oivalluksia avoimesti luotettujen ystävien kanssa."
-  friendships:
-    find friends title: "Etsi ystäviä"
-    search by name: "Etsi nimellä"
-    search button: "Hae"
-    widget:
-      find friends title: "Etsi ystäviä"
-      search by name: "Etsi nimellä"
-      search button: "Hae"
-    offer success: "Kaveripyyntö lähetetty"
-    offer failure: "Kaveripyynnön lähetys epäonnistui"
-    create success: "OK! Olette nyt ystäviä."
-    create failure: "Ystävyyden muodostaminen epäonnistui"
-    destroy success: "Pyyntö hylätty"
-    destroy failure: "Pyynnön hylkäys epäonnistui"
-    requests title: "Ystäväpyynnöt"
-    requests view all: "Näytä kaikki kaveripyynnöt"
-    requests none: "Ei kaveripyyntöjä"
-    requests no new: "Ei uusia pyyntöjä"
-    status:
-      pending: "Pyyntö odottaa"
-      friends: "Ystävät"
-    user wants friendship: "%{user} haluaa olla ystäväsi"
-    user wants friendship partial: "haluaa olla ystäväsi"
-    form:
-      remove friend button: "Poista ystävä"
-      remove friend button title: "Poista tämä henkilö ystävälistaltasi"
-      add friend button: "Lisää ystävä"
-      add friend button title: "Lähetä %{user}:lle ystäväpyyntö"
-      accept button: "Hyväksy"
-      accept request button: "Hyväksy pyyntö"
-      ignore button: "Hylkää"
-      ignore request button: "Hylkää pyyntö"
   notes:
-    none user: "%{username} ei ole vielä tehnyt muistiinpanoja."
-    blank slate:
-      heading: "Sinulla ei vielä ole muistiinpanoja."
-      description: "Kun luet Raamattua ja tunnet Jumalan puhuvan sinulle, voit samalla kirjoittaa ajatuksesi tähän. Merkintäsi lisätään <em>yksityisinä</em>. Jos kuitenkin haluat jakaa merkinnän ystäviesi kanssa, avaa se ja muuta se <em>julkiseksi</em>."
-    form:
-      title field: "Otsikko:"
-      content field: "Sisältö:"
-      highlight field: "Korostus: (vapaaehtoinen)"
-      reference field: "Viitteet:"
-      status field: "Tila:"
-      save button: "Tallenna"
-    status:
-      private: "Yksityinen"
-      public: "Julkinen"
-      friends: "Vain ystävät"
-      draft: "Luonnos"
     list title: "Muistiinpanot"
     loading community: "Yhteisön tekemiä muistiinpanoja ladataan..."
     no community notes: "Yksikään yhteisön tekemä muistiinpano ei viittaa löytämiimme versioihin. Luodaksesi muistiinpanon, valitse Raamatun jae lukijassa ja klikkaa Valittu-painiketta lukijan yläosassa."
@@ -302,7 +160,6 @@ fi:
     private: "Yksityinen"
     is private: "Valittu muistiinpano on yksityinen."
     draft: "Luonnos"
-    friends: "Ystävät"
     creation form errors: "Seuraava virhe (seuraavat virheet) estivät muistiinpanon luomisen:"
     reference field: "Viitteet"
     version field: "Käännös:"
@@ -323,10 +180,7 @@ fi:
     cancel: "Peruuta"
     pop out: "Näytä"
     none found: "Muistiinpanoja ei löytynyt..."
-    create success: "OK! Muistiinpanosi tallennettiin."
-    create failure: "Muistiinpanon tallennus epäonnistui"
-    destroy success: "Muistiinpano poistettu"
-    destroy failure: "Muistiinpanon poistaminen epäonnistui"
+    successfully deleted: "Muistiinpano poistettu"
   ref:
     loading secondary: "Ladataan kohtaa toisesta käännöksestä..."
     clear verses: "Tyhjennä valitut jakeet"
@@ -357,8 +211,6 @@ fi:
     profile form errors: "Profiilin päivityksessä tapahtui virhe/virheitä:"
     email address: "Sähköpostiosoite"
     user name: "Käyttäjänimi"
-    first name: "Etunimi"
-    last name: "Sukunimi"
     agreement: "Hyväksyn YouVersionin ehdot %{terms_link}."
     terms and conditions: "Käyttöehdot"
     facebook sign up success: "Mahtavaa! Olet valtuuttanut Facebookin. Valitse YouVersion-käyttäjänimi ja salasana jatkaaksesi."
@@ -376,7 +228,6 @@ fi:
     my profile: "Profiilini"
     edit profile: "Muokkaa profiilia"
     update profile: "Päivitä profiili"
-    go to your profile: "Mene omaan profiiliin"
     other user profile: "%{username}:n profiili"
     my password: "Vaihda salasanani"
     edit password: "Vaihda salasana"
@@ -389,7 +240,7 @@ fi:
     edit account_existence: "Poista tili"
     delete account button: "Poista YouVersion-tilini"
     no devices: "Ei laitteita kytkettynä YouVersion-tiliisi"
-    no devices download copy: "YouVersionin verkkoraamattuun perustuva Raamattusovellus on ilmainen Raamattu, jonka voi asentaa lähes kaikkiin mobiililaitteisiin. Raamattusovelluksessa voit lukea Raamattua, jakaa jakeita yhteisöpalveluihin, lisätä kirjanmerkkejä lempikohtiin ja paljon muuta&mdash;kaikki tämä on saatavilla paikasta riippumatta. Lataa Raamattusovellus mobiililaitteellesi osoitteesta <a href='https://www.bible.com/app'>bible.com/app</a> ja yhdistä laite tiliisi!"
+    no devices download copy: "Raamattusovellus, joka perustuu YouVersion.com-verkkoraamattuun, on ilmainen mobiiliraamattu, jonka voi asentaa lähes mille tahansa mobiililaitteelle. Raamattusovellus sisältää mahdollisuuden lukea Raamattua, jakaa jakeita sosiaalisessa mediassa, lisätä kirjanmerkkejä suosikkijakeisiin ynnä muuta &mdash; kaikki tämä kulkee helposti mukanasi. Mene laitteellasi osoitteeseen <a href='https://www.bible.com/download'>bible.com/download</a> ladataksesi Raamattusovelluksen ja liitä käyttäjätilisi sovellukseen!"
     yes delete: "Kyllä, poista tilini"
     account delete success: "YouVersion-tilisi poistettiin onnistuneesti. Toivomme, että löydät jatkossakin merkityksellisiä tapoja olla tekemisissä Raamatun kanssa. Joku näistä sovelluksista voi olla avuksi siirtyessäsi eteenpäin: <a href= http://www.youversion.com/free-bible-apps> www.youversion.com/free-bible-apps </a>"
     delete account description: "Jos poistat tilisi, kaikki tiedot, historia ja personointi häviää (kuten muistiinpanot, kirjanmerkit, korostukset jne.) YouVersion.comista ja Raamattusovelluksesta. Tätä toimintoa et itse, eikä tiimisi, voi perua. Jos varmasti haluat edetä, voit tehdä niin alla."
@@ -403,7 +254,7 @@ fi:
     my badges: "Omat ansiomerkkini"
     revised date: "Viimeksi tarkistettu %{date}"
     update email copy: "Syötä uusi sähköpostiosoite ja klikkaa Päivitä sähköpostiosoite. Lähetämme sinulle linkin, jota klikkaamalla vahvistat uuden sähköpostiosoitteesi."
-    edit email: "Vaihda sähköpostiosoite"
+    edit email: "Päivitä sähköpostiosoite"
     update email check: "Ole hyvä ja tarkista sähköpostisi, klikkaa linkkiä vahvistaaksesi uuden sähköpostiosoitteesi."
     confirm update email success: "Kiitos! Olet päivittänyt sähköpostiosoitteesi."
     confirm update email error: "Valitettavasti sähköpostiosoitteen vaihtamisessa tapahtui virhe."
@@ -504,16 +355,6 @@ fi:
       general title: "Yleistiedot"
       general text: "do not translate"
     profile:
-      blank slate:
-        heading: "Siirry eteenpäin, täällä ei ole (vielä) sisältöä"
-        description: "Aloita kanssakäyminen Raamatun tai ystäviesi kanssa, niin tällä sivulla näet menneet tapahtumasi."
-      visit friend: "Siirry %{friend}:n profiiliin"
-      tab activity: "Toiminta"
-      tab friends: "Ystävät"
-      tab notes: "Muistiinpanot"
-      tab bookmarks: "Kirjanmerkit"
-      tab highlights: "Korostukset"
-      tab badges: "Ansiomerkit"
       first name: "Etunimi"
       last name: "Sukunimi"
       email: "Sähköpostiosoite"
@@ -553,10 +394,6 @@ fi:
       reading_plans: "Ilmoita minulle aloittamieni lukusuunnitelmien tiedot."
       publishing partners: "Pidä minut ajantasalla YouVersionin sisältökumppanien uutisista."
       update: "Päivitä ilmoitukset"
-      friendships: "Ilmoita minulle ystäväpyynnöistä"
-      moments: "Ilmoita minulle ystävien toiminnasta"
-      comments: "Ilmoita kommenteista toiminnalleni"
-      likes: "Ilmoita minulle, kun joku tykkää toiminnastani"
   bookmarks:
     new: "Uusi kirjanmerkki"
     edit: "Muokkaa"
@@ -567,14 +404,12 @@ fi:
     all: "Kaikki"
     labels label: "Etiketit:"
     title: "Kirjanmerkit"
-    my labels: "Omat otsikot"
     not found: "Kirjanmerkit toimivat pikaoppaana suosikkikappaleisiisi tai viimeisimpään lukemaasi lukuun jossakin tietyssä kirjassa. Lisätäksesi kirjanmerkin, valitse jae lukijassa ja klikkaa Valittu-nappia lukijan yläosassa."
     other user not found: "%{username} ei ole vielä tallentanut kirjanmerkkejä."
     creation form errors: "Kirjanmerkin luominen estyi seuraavien virheiden takia:"
-    create success: "OK! Kirjanmerkkisi tallennettiin."
-    destroy success: "Kirjanmerkki poistettu"
-    destroy failure: "Kirjanmerkin poisto epäonnistui"
-    update success: "Kirjanmerkki päivitetty"
+    successfully created: "Kirjanmerkki lisätty"
+    successfully deleted: "Kirjanmerkki poistettu"
+    successfully updated: "Kirjanmerkki päivitetty"
     labels placeholder: "Erota useat etiketit pilkuilla."
     save: "Tallenna kirjanmerkki"
     confirm delete: "Kyllä, olen varma"
@@ -585,36 +420,10 @@ fi:
     update: "Päivitä"
     color: "Väri:"
     version field: "Käännös:"
-    none user: "%{username}:lla ei ole kirjanmerkkejä"
-    blank slate:
-      heading: "Lisää kirjanmerkkejä tärkeille jakeille"
-      description: "Lukiessasi Raamattua, valitse jae ja merkitse se kirjanmerkillä. Palaa tänne kun haluat katsoa, muokata tai poistaa kirjanmerkkejä."
-    form:
-      title field: "Otsikko:"
-      reference field: "Lähde:"
-      labels field: "Nimikkeet (pilkulla erotettuna):"
-      highlight field: "Korostus: (vapaaehtoinen)"
-      colors field: "Väri:"
-      update button: "Päivitä kirjanmerkki"
-      save button: "Tallenna kirjanmerkki"
   badges:
     earned a badge: "Ansaitsit ansiomerkin"
     user badges: "Käyttäjän %{user} ansiomerkit"
-    earned date: "Ansainnut %{username} %{ago} sitten"
-    none me: "Et ole vielä ansainnut yhtään ansiomerkkiä."
-    none user: "%{username} ei ole ansainnut yhtään ansiomerkkiä."
   plans:
-    widget:
-      my plans: "Omat suunnitelmat"
-      start reading: "Aloita lukeminen"
-      view my plans: "Omat suunnitelmat"
-      featured plans: "Suunnitelmat esittelyssä"
-      view all plans: "Kaikki suunnitelmat"
-    settings: "Asetukset"
-    privacy:
-      visible to friends?: "Haluatko tähän suunnitelmaan liittyvän toimintasi näkyvän ystävillesi?"
-      private: "Yksityinen"
-      public: "Julkinen"
     title: "Lukusuunnitelmat"
     browse by category: "Selaa aiheittain"
     browse plans: "Selaa kategorian %{category} suunnitelmia"
@@ -645,6 +454,7 @@ fi:
     no public plans: "Käyttäjän %{username} lukusuunnitelmat eivät ole nähtävissä."
     filter by lang: "Suodata suunnitelmat kielen perusteella"
     plan settings: "Suunnitelman asetukset"
+    settings: "Asetukset"
     search: "Hae"
     search placeholder: "Hae kategorian %{category} suunnitelmat"
     subscribe to plan: "Aloita tämä suunnitelma"
@@ -757,29 +567,17 @@ fi:
     chapter only: "Valitettavasti ääntä ei ole saatavissa jaekohtaisesti. Luku on kuunneltavissa lukijan kautta."
     close player menu: "Sulje"
   highlights:
-    title: "Korostukset"
-    blank slate:
-      heading: "Korosta tärkeitä jakeita"
-      description: "Lukiessasi Raamattua, valitse jae ja lisää siihen korostus. Palaa tänne kun haluat katsoa, muokata tai poistaa korostuksia."
-    none user: "%{username}:lla ei ole korostuksia"
     choose color: "Valitse väri"
-    create success: "OK! Korostuksesi tallennettiin"
-    create failure: "Korostuksen tallennus epäonnistui"
-    destroy success: "Korostus poistettu"
-    destroy failure: "Korostuksen poisto epäonnistui"
     creation error: "Valitettavasti korostaminen ei onnistunut."
     delete error: "Valitettavasti korostuksen poistaminen ei onnistunut."
-    form:
-      save button: "Tallenna korostus"
   searching:
     bible: "Raamattu"
-    plans: "Suunnitelmat"
+    plans: "Lukusuunnitelmat"
     users: "Käyttäjät"
     notes: "Muistiinpanot"
     total results: "%{total} tulosta"
     suggestion html: "Tarkoititko %{suggestion_link}?"
     all versions: "Kaikki käännökset kielellä %{language_name}"
-    results for: "Tulokset haulle:"
   donate:
     donate now: "Tee lahjoitus"
     donate now intl: "tai lahjoita kansainvälisesti"
@@ -949,6 +747,9 @@ fi:
     public domain: "Tekijänoikeusvapaa"
     loading: "Ladataan enemmän käännöksiä..."
     load error: "Käännöksien latauksessa tapahtui valitettavasti virhe. Sulje tämä valikko ja avaa uudestaan."
+  reader help:
+    title: "Valitse jae..."
+    line 1: "Klikkaa tai napauta mitä tahansa jaetta tai jakeita tehdäksesi kirjanmerkin, korostaaksesi, luodaksesi muistiinpanon tai jakaaksesi ystävillesi!"
   campaigns:
     100m:
       logo: "YouVersion: Raamattusovellus"
@@ -978,9 +779,3 @@ fi:
       sidebar:
         tagline: "Tehdään historiaa yhdessä"
         button: "Jaa Raamattusovellus"
-  ui:
-    pagination:
-      next page: "Seuraava sivu"
-      previous page: "Edellinen sivu"
-    datetime:
-      just now: "juuri nyt"
