--- a/config/locales/hu.yml
+++ b/config/locales/hu.yml
@@ -1,37 +1,5 @@
 hu:
   social:
-    intro page:
-      main heading: "Beszélgetés és felfedezés"
-      main description: "Egy új mód, hogy a Bibliát megbízható barátaiddal tanulmányozd"
-      moment:
-        user aaron: "Aaron Steele"
-        user andy: "Andy Knight"
-        timestamp: "5 nappal ezelőtt"
-        title: "Könyvjelző került a Zsolt. 31:8-hoz"
-        verse: "Hadd vigadjak és örüljek a te kegyelmednek, a miért meglátod nyomorúságomat és megismered a háborúságokban lelkemet"
-        reference: "Zsolt. 31:8"
-        discover:
-          copy: "Fedezz fel és tanulj barátaiddal a kiemelésükből, könyvjelzőikből és megjegyzéseikből"
-          button: "Honnan kezdjem el?"
-        share:
-          copy: "Ossz meg őszinte beszélgetéseket az Igéről."
-          button: "Kezdj el keresni néhány barátot!"
-        likes:
-          info: "és mág 4 ehhez hasonló"
-        comments:
-          first:
-            text: "Valóban hallanom kellett ma ezt, köszönöm. Zárkózzunk fel minél előbb!"
-            time: "csaknem 3 órával ezelőtt"
-          second:
-            text: "Amen, én is. Küldök most egy e-mailt."
-            time: "csaknem 27 perccel ezelőtt"
-          field placeholder: "Írj egy megjegyzést..."
-    widget:
-      timeline: "Idővonal"
-      no activity yet: "Még nem történt aktívitás."
-    moment:
-      read all: "Olvasd el az egészet"
-      read less: "Olvass kevesebbet"
     share: "Megosztás"
     my connections: "Csatlakoztatott Fiókok"
     connected as: "Kapcsolódott a / (kapcsolódás) mint / (felhasználónév)."
@@ -64,13 +32,9 @@ hu:
     users username not available: "A megadott felhasználónév már foglalt."
     users username or password invalid: "A felhasználó név vagy jelszó érvénytelen."
     users username required: "Meg kell adnod egy felhasználónevet."
-    users first name required: "Meg kell adnod egy keresztnevet."
-    users last name required: "Meg kell adnod egy vezetéknevet."
-    moments content required: "A tartalom nem lehet üres."
   meta:
     kids_app:
       title: "Biblia alkalmazás gyermekeknek"
-      description: "..."
     100million:
       title: "100 millióval kezdődik"
       description: "A Biblia alkalmazást már csaknem 100 millió felhasználó töltötte le - hihetetlen mérföldkő! De még egészen az elején vagyunk. Töltsd le ma az ingyenes Biblia alkalmazást - azután oszd meg az alkalmazást a barátaiddal. Írjunk együtt történelmet!"
@@ -98,7 +62,7 @@ hu:
   new note: "Új Jegyzet"
   share success: "Az üzenetedet megosztottuk."
   share error: "Sajnáljuk, egy hiba miatt az üzeneted megosztása nem sikerült. Próbálkozz újra."
-  google plus: "Google+"
+  google plus: "Google +"
   connect to: "Kapcsolódj a %{connection} fiókodhoz"
   deleted connection: "Sikeresen megszakítottad a kapcsolatot a(z) %{connection}-val/-vel."
   deleted connection error: "Sajnáljuk kapcsolódási hiba történt a %{connection} kapcsolat megszakítása közben. "
@@ -154,7 +118,6 @@ hu:
   find friends: "Barátok keresése"
   search placeholder: "Keresés..."
   search: "Keresés"
-  more: "Több"
   book: "Könyv"
   filter book: "Könyvek szűrése..."
   save: "Mentés"
@@ -168,14 +131,17 @@ hu:
   chapter: "Fejezet"
   bible: "Biblia"
   notes title: "Jegyzetek"
+  friends: "Barátok"
   groups: "Csoportok"
   mobile: "Mobil"
   live: "Élő/Csoportok"
   first page: "Első oldal"
   last page: "Utolsó oldal"
+  next page: "Következő oldal"
+  previous page: "Előző oldal"
   invalid username or password: "Érvénytelen felhasználónév vagy jelszó."
   show all bookmarks: "Összes %{total} könyvjelző megtekintése"
-  show all notes: "Lásd az összes megjegyzést"
+  show all notes: "Összes %{total} jegyzet megtekintése"
   recent bookmarks: "Új könyvjelzők"
   percentage display: "%{number}%"
   myself: "Én"
@@ -186,115 +152,7 @@ hu:
   or:
     lower: "vagy"
     upper: "VAGY"
-  moments:
-    vod:
-      title: "Napi igevers"
-    friendship:
-      now friends: "Mostantól a barátod lett"
-    cta:
-      profile update text: "Segíts a barátaidnak megtalálni téged."
-      profile update button: "Profilod frissítése"
-      sharing text: "Igeversek megosztása közösségi hálózatokon"
-      sharing button: "Megoszthatóvá teszi"
-      friends text: "Nézd meg a barátaid pillanatait a Bibliában."
-      friends button: "Barátok keresése"
-    action:
-      go to scripture: "Menj a Szentíráshoz"
-      load more: "Több betöltése"
-      like: "Tetszik"
-      liked: "Tetszett"
-      like title: "Tetszik"
-      last comment: "Utolsó megjegyzés"
-      share: "Megosztás"
-      share title: "Oszd meg ezt a barátaiddal vagy a családoddal"
-      comment: "Hozzászólás"
-      comment title: "Nézd meg az összes hozzászólást"
-      edit: "Szerkesztés"
-      edit highlight title: "Szerkeszd ezt a kiemelést"
-      edit bookmark title: "Szerkeszd ezt a könyvjelzőt"
-      edit note title: "Szerkeszd ezt a jegyzetet"
-      delete: "Törlés"
-      delete confirm: "Biztosan?"
-      delete highlight title: "Töröld ezt a kiemelést"
-      delete bookmark title: "Töröld ezt a könyvjelzőt"
-      delete note title: "Töröld ezt a jegyzetet"
-  notifications:
-    title: "Értesítések"
-    none: "Nincsenek bejelentéseid"
-    no new: "Nincsenek új bejelentések"
-    view all: "Nézz meg minden bejelentést"
-  likes:
-    create success: "Sikerült! A lájkod el lett mentve"
-    create failure: "Nem tudtuk elmenteni, hogy tetszik neked."
-    destroy success: "Töröltük, hogy tetszett."
-    destroy failure: "Nem tudtuk törölni, hogy tetszett."
-  comments:
-    view all N: "Nézd meg mind a %{count} megjegyzést"
-    post comment: "Postolj egy észrevételt"
-    create success: "Sikerült! A megjegyzésedet posztoltuk."
-    create failure: "Az észrevételt nem tudtuk posztolni"
-    destroy success: "Megjegyzés törölve"
-    destroy failure: "A megjegyzést nem lehetett törölni"
-    form:
-      save button: "Küldés"
-  friends:
-    you have N friends: "Van %{count} barátod"
-    none me: "Oszd meg az olyan pillanataidat a Bibliádban, mint a könyvjelzők, kiemelések és jegyzetek, a legközelebbi barátaiddal és a családoddal."
-    find friends: "Barátok keresése"
-    blank slate:
-      heading: "Jelenleg nincsenek barátaid"
-      description: "Barátoknak kell lennetek ezzel a személlyel ahhoz, hogy láthasd a barátait."
-    limit notice: "Akár 150 barátod is lehet"
-    limit description: "Ha korlátozod a Biblia alkalmazáson a barátaidat olyan emberekre, akiket jól ismersz, ez  lehetőséget teremt őszinte beszélgetésekre és közös felfedezésekre a megbízható barátaiddal."
-  friendships:
-    find friends title: "Barátok keresése"
-    search by name: "Keresés a név alapján"
-    search button: "Menj"
-    widget:
-      find friends title: "Barátok keresése"
-      search by name: "Keresés a név alapján"
-      search button: "Menj"
-    offer success: "Barátkérés elküldve"
-    offer failure: "Hiba történt a barátkérés elküldésekor"
-    create success: "Sikerült! Most már barátok vagytok."
-    create failure: "Hiba törtét a barátság létrehozásában"
-    destroy success: "Kérés elutasítva"
-    destroy failure: "Hiba történt a barátság visszautasításakor"
-    requests title: "Függő kapcsolatok"
-    requests view all: "Nézd meg az összes barátkérést"
-    requests none: "Nincs egy barátkérésed sem"
-    requests no new: "Új felkérések"
-    status:
-      pending: "A felkérés folyamatban van"
-      friends: "Barátok"
-    user wants friendship: "%{user} szeretne barátod lenni"
-    user wants friendship partial: "szeretne barátod lenni"
-    form:
-      remove friend button: "Barát eltávolítása"
-      remove friend button title: "Távolítsa el ezt a személyt a barátaid listájáról"
-      add friend button: "Addj hozzá barátot"
-      add friend button title: "Küldj %{user}nak/nek egy barátkérést"
-      accept button: "Elfogadom"
-      accept request button: "A felkérést elfogadom"
-      ignore button: "Mellőz"
-      ignore request button: "A felkéréssel nem foglalkozom"
   notes:
-    none user: "%{username} még nem készített jegyzetet"
-    blank slate:
-      heading: "Még nincsenek jegyzeteid"
-      description: "Ahogy olvasod a Bibliát és meghallod, hogy Isten kicsi, halk szava szól hozzád, ezeket a gondolatokat ide gyorsan leírhatod. A jegyzeteid alapértelmezésben <em>sajátjaidként</em> lesznek jelölve. Ha szeretnél egy jegyzetet megosztani a barátaiddal, egyszerűen csak nyisd meg és váltsd át <em>nyilvánosra</em>."
-    form:
-      title field: "Cím:"
-      content field: "Tartalom:"
-      highlight field: "Kiemelés: (választható)"
-      reference field: "Hivatkozás(ok):"
-      status field: "Állapot:"
-      save button: "Mentés"
-    status:
-      private: "Saját"
-      public: "Nyilvános"
-      friends: "Csak barátok"
-      draft: "Piszkozat"
     list title: "Jegyzetek"
     loading community: "Közösségi jegyzetek töltése..."
     no community notes: "A kiválasztott versekre vonatkozóan nem található a közösség által írt  megjegyzés. Jegyzet létrehozásához válassz egy verset a Biblia olvasóban és kattints a Kiválaszt gombra az olvasó tetején."
@@ -302,7 +160,6 @@ hu:
     private: "Saját"
     is private: "A kért megjegyzés bizalmas."
     draft: "Piszkozat"
-    friends: "Barátok"
     creation form errors: "A következő hiba(k) akadályozta(k) meg a jegyzeted létrehozását:"
     reference field: "Hivatkozás(ok):"
     version field: "Verzió:"
@@ -323,10 +180,7 @@ hu:
     cancel: "Mégsem"
     pop out: "Új ablakban"
     none found: "Nem találtunk jegyzeteket..."
-    create success: "Sikerült! A jegyzeted el lett mentve."
-    create failure: "Hiba történt a jegyzet mentésekor"
-    destroy success: "jegyzet törölve"
-    destroy failure: "Hiba történt a jegyzet törlésekor"
+    successfully deleted: "Jegyzet eltávolítva"
   ref:
     loading secondary: "Referencia betöltése a másodlagos verzióban..."
     clear verses: "Kiválasztott versek törlése"
@@ -357,8 +211,6 @@ hu:
     profile form errors: "A következő hiba(k) akadályozta(k) meg a profilod frissítését:"
     email address: "Email cím"
     user name: "Felhasználónév"
-    first name: "Keresztnév"
-    last name: "Vezetéknév"
     agreement: "Egyetértek a YouVersion %{terms_link}-el."
     terms and conditions: "ÁSZF"
     facebook sign up success: "Nagyszerű! Engedélyeztetted a Facebookot. Válassz egy YouVersion felhasználónevet és jelszót a folytatáshoz."
@@ -376,7 +228,6 @@ hu:
     my profile: "Profilom"
     edit profile: "Profil javítása"
     update profile: "Profil frissítése"
-    go to your profile: "Lépj be a profilodba"
     other user profile: "%{username} profilja"
     my password: "Jelszavam megváltoztatása"
     edit password: "Jelszó változtatás"
@@ -389,7 +240,6 @@ hu:
     edit account_existence: "Fiók törlése"
     delete account button: "YouVersion fiókom törlése"
     no devices: "Nincs eszköz csatlakoztatva a YouVersion fiókodhoz"
-    no devices download copy: "Az online Bibliára alapozva a YouVersion Biblia alkalmazás egy ingyenes mobil Biblia, amit csaknem bármilyen mobil készülékre le lehet tölteni, A Biblia alkalmazás lehetővé teszi a felhasználók számára, hogy olvassák a Bibliát, osszanak meg igeverseket a társasági hálózataikon, könyvjelzőt tegyenek a kedvenc részeikhez és még sok mást; mindezt olyan módon, ami alkalmazkodik az egyre inkább mozgásban lévő életstílusukhoz. Látogass el a <a href='https://www.bible.com/app'>bible.com/app</a> a mobilkészülékedről, hogy letöltsd a Biblia alkalmazást és csatlakozz a fiókodhoz!"
     yes delete: "Igen, töröld a fiókom"
     account delete success: "A YouVersion fiókod meg lett szüntetve. Reméljük, meg fogod találni a megfelelő módot, hogy kapcsolatban maradj a Bibliával. A következő alkalmazások segíthetnek a jövőben:  <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
     delete account description: "Ha törlöd a fiókodat, a YouVersion-ből és a Biblia alkalmazásból minden információ, előzmény és személyre szabás végleg törlődik  (ilyenek a jegyzetek, könyvjelzők, kiemelések stb.) Ezt a műveletet sem Te, sem mi nem tudjuk visszavonni. Ha biztosan folytatni akarod, az alábbiakban megteheted."
@@ -403,7 +253,7 @@ hu:
     my badges: "Jelvényeim"
     revised date: "Utoljára átvizsgálva %{date}-én/-án"
     update email copy: "Add meg az új e-mail címed és kattints az \"e-mail cím frissítésére\". Ezután elküldünk egy linket amin keresztül jóváhagyhatod az új e-mail címedet."
-    edit email: "e-mail cím megváltoztatás"
+    edit email: "E-mail cím frissítése"
     update email check: "Ellenőrizd az e-mail fiókodat és kattints a linkre, hogy jóváhagyhasd az új e-mail címedet."
     confirm update email success: "Köszönjük! Frissítetted az email címedet."
     confirm update email error: "Sajnáljuk, egy hiba lépett fel email címed megváltoztatásának befejezése közben."
@@ -504,16 +354,6 @@ hu:
       general title: "Do not translate"
       general text: "Do not translate"
     profile:
-      blank slate:
-        heading: "Menj tovább, itt (még) semmi nem látható"
-        description: "Kezdj el foglalkozni a Bibliával vagy a barátaiddal és ez az oldal kronológiai sorrendben megmutatja, hogy mit csináltál"
-      visit friend: "Látogass el a %{friend}'s profiljához"
-      tab activity: "Tevékenység"
-      tab friends: "Barátok"
-      tab notes: "Jegyzetek"
-      tab bookmarks: "Könyvjelzők"
-      tab highlights: "Kiemelések"
-      tab badges: "Jelvények"
       first name: "Keresztnév"
       last name: "Vezetéknév"
       email: "E-mail cím"
@@ -553,10 +393,6 @@ hu:
       reading_plans: "Értesítést kérek az elkezdett olvasási tervekkel kapcsolatos információkról."
       publishing partners: "Legyek naprakész a YouVersion tartalompartnereinek újdonságaival."
       update: "Értesítések frissítése"
-      friendships: "Jelezd ha van barátkérés"
-      moments: "Értesíts a barátaim aktivitásáról"
-      comments: "Értesíts, ha valaki hozzászól az aktivitásomhoz"
-      likes: "Jelzést kérek az aktivitásomhoz kapcsolódó lájkokról"
   bookmarks:
     new: "Új könyvjelző"
     edit: "Javítás"
@@ -567,14 +403,12 @@ hu:
     all: "Összes"
     labels label: "Címkék:"
     title: "Könyvjelzők"
-    my labels: "Címkéim"
     not found: "A könyvjelzők gyors hozzáférést jelentenek a kedvenc verseidhez vagy egy bizonyos könyv utoljára olvasott fejezetéhez. Könyvjelző hozzáadásához válaszd ki a verset a Bibliaolvasóban és kattints a Kiválasztott gombra az olvasó felső részén."
     other user not found: "%{username} egy könyvjelzőt sem mentett még el."
     creation form errors: "A következő hiba(k) akadályozta(k) meg a könyvjelződ létrehozását:"
-    create success: "Sikerült! A könyvjelző el van mentve."
-    destroy success: "Könyvjelző eltávolítva"
-    destroy failure: "Hiba történt a könyvjelző eltávolításakoz"
-    update success: "Könyvjelző frissítve"
+    successfully created: "Könyvjelző hozzáadva"
+    successfully deleted: "Könyvjelző eltávolítva"
+    successfully updated: "Könyvjelző frissítve"
     labels placeholder: "Több címkét vesszővel válassz el."
     save: "Könyvjelző mentése"
     confirm delete: "Igen, biztos"
@@ -585,36 +419,10 @@ hu:
     update: "Frissítés"
     color: "Szín:"
     version field: "Verzió:"
-    none user: "%{username} nak/nek nincsenek könyvjelzői"
-    blank slate:
-      heading: "Tegyél könyvjelzőt a jelentős versekhez"
-      description: "Biblia olvasás közben válassz egy igeverset és jelöld meg könyvjelzővel. Térj vissza ide, hogy megnézd, szerkeszd vagy eltávolítsd a könyvjelzőt."
-    form:
-      title field: "Cím:"
-      reference field: "Hivatkozás:"
-      labels field: "Címkék (vesszővel elválasztva):"
-      highlight field: "Kiemelés: (választható)"
-      colors field: "Szín:"
-      update button: "frissítsd a könyvjelzőt"
-      save button: "Könyvjelző mentése"
   badges:
     earned a badge: "Jelvényt szereztél"
     user badges: "%{user} jelvényei"
-    earned date: "%{username}\térdemelte ki %{ago} ezelőtt"
-    none me: "Még nem szereztél jelvényt."
-    none user: "%{username} még nem szerzett jelvényt."
   plans:
-    widget:
-      my plans: "Terveim"
-      start reading: "Kezdj el olvasni"
-      view my plans: "Nézdd meg a terveimet!"
-      featured plans: "Sokat említett tervek"
-      view all plans: "Nézdd meg az összes tervet!"
-    settings: "Beállítások"
-    privacy:
-      visible to friends?: "Szeretnéd, ha az ezzel a tervvel kapcsolatos aktivitásodat láthatnák a barátaid?"
-      private: "Saját"
-      public: "Nyilvános"
     title: "Olvasási tervek"
     browse by category: "Tallózás kategória szerint"
     browse plans: "%{category} tervek tallózása"
@@ -645,6 +453,7 @@ hu:
     no public plans: "%{username} nem rendelkezik látható olvasási tervekkel."
     filter by lang: "Tervek szűrése nyelv szerint"
     plan settings: "Terv beállítások"
+    settings: "Beállítások"
     search: "Keresés"
     search placeholder: "%{category} tervek keresése"
     subscribe to plan: "Kezdd el ezt a tervet"
@@ -757,29 +566,17 @@ hu:
     chapter only: "Sajnáljuk, ezekhez a versekhez nem elérhető hangos funkció. A fejezet hangos funkcióját tekintsd meg az olvasóban."
     close player menu: "Bezárás"
   highlights:
-    title: "Kiemelések"
-    blank slate:
-      heading: "Emeld ki a jelentős igeverseket"
-      description: "Biblia olvasás közben válassz ki egy igét és emeld ki. Térj vissza ide, hogy megnézd, szerkeszd vagy kitöröld a kiemelést."
-    none user: "%{username} nak/nek nincsenek kiemelései"
     choose color: "Válassz színt."
-    create success: "Sikerült! A kiemelésed el lett mentve."
-    create failure: "Hiba történt a kiemelés mentésekor"
-    destroy success: "Kiemelés törölve"
-    destroy failure: "Hiba történt a kiemelés eltávolításakor"
     creation error: "Sajnáljuk, nem sikerült kiemelni."
     delete error: "Sajnáljuk, a kiemelést nem sikerült eltávolítani."
-    form:
-      save button: "Kiemelés mentése"
   searching:
     bible: "Biblia"
-    plans: "Tervek"
+    plans: "Olvasási tervek"
     users: "Felhasználók"
     notes: "Jegyzetek"
     total results: "Körülbelül %{total} eredmény"
     suggestion html: "Így értetted: %{suggestion_link}?"
     all versions: "Összes %{language_name} verzió"
-    results for: "Keresés:"
   donate:
     donate now: "Adományozz most"
     donate now intl: "vagy adományozz nemzetközileg"
@@ -949,6 +746,9 @@ hu:
     public domain: "Nyilvános domén"
     loading: "További verzió betöltése..."
     load error: "Sajnos probléma lépett fel a további verziók betöltése során. Zárd be ezt a menüt és próbáld újra megnyitni."
+  reader help:
+    title: "Válassz egy verset..."
+    line 1: "Kattints vagy érintsd meg bármelyik verset vagy versgyűjteményt, hogy hozzáadhasd a kedvencekhez, kiemeld, megjegyzést fűzz hozzá vagy megoszd a barátaiddal!"
   campaigns:
     100m:
       logo: "YouVersion: A Biblia alkalmazás"
@@ -978,9 +778,3 @@ hu:
       sidebar:
         tagline: "Írjunk együtt történelmet."
         button: "Biblia alkalmazás megosztása"
-  ui:
-    pagination:
-      next page: "Következő oldal"
-      previous page: "Előző oldal"
-    datetime:
-      just now: "épp most"
