--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,37 +1,5 @@
 ja:
   social:
-    intro page:
-      main heading: "会話と発見"
-      main description: "信頼できる友だちと一緒に、今までにない方法で聖書アプリを楽しめます。"
-      moment:
-        user aaron: "アロン・スティール"
-        user andy: "アンディ・ナイト"
-        timestamp: "5日前"
-        title: "詩編31章7節をブックマークしました"
-        verse: "あなたのいつくしみを喜び楽しみます。あなたがわたしの苦しみをかえりみ、わたしの悩みにみこころをとめ"
-        reference: "詩編31章7節"
-        discover:
-          copy: "お友達のハイライト、ブックマーク、ノートから一緒に学びましょう"
-          button: "どこから始めれば？"
-        share:
-          copy: "聖句について本音で話し合いましょう"
-          button: "まずは、お友達を見つけましょう"
-        likes:
-          info: "類似の4件"
-        comments:
-          first:
-            text: "今日まさに聞きたかったことです。ありがとう。また後で！"
-            time: "約3時間前"
-          second:
-            text: "アーメン、その通りです。メールを送ります。"
-            time: "約27分前"
-          field placeholder: "コメントを書く…"
-    widget:
-      timeline: "タイムライン"
-      no activity yet: "まだアクティビティがありません。"
-    moment:
-      read all: "全て読む"
-      read less: "閲覧範囲を縮小"
     share: "シェア"
     my connections: "連携済みアカウント"
     connected as: "%{username} として %{connection} に連携されました。"
@@ -64,13 +32,9 @@ ja:
     users username not available: "入力されたユーザ名はご利用いただけません"
     users username or password invalid: "入力いただいたユーザ名またはパスワードが正しくありません"
     users username required: "ユーザ名の入力が必要です。"
-    users first name required: "名前（名）の入力が必要です。"
-    users last name required: "苗字（姓）の入力が必要です。"
-    moments content required: "空欄のままでは残せません。"
   meta:
     kids_app:
       title: "子ども用聖書アプリ"
-      description: "…"
     100million:
       title: "1億人から始まります。"
       description: "聖書アプリのダウンロード件数、１億達成という素晴らしい節目に近付いています。でも、これもほんの始まりにすぎません。無料の聖書アプリを今すぐダウンロードして、お友達にもシェアしましょう。共に歴史を塗り替えましょう。"
@@ -98,7 +62,7 @@ ja:
   new note: "新規ノート"
   share success: "メッセージがシェアされました"
   share error: "メッセージのシェアに失敗しました。もう一度、実行してください。"
-  google plus: "Google+"
+  google plus: "Google +"
   connect to: "%{connection} アカウントに連携"
   deleted connection: "%{connection} への連携設定が問題なく解除されました。"
   deleted connection error: "申し訳ございません。%{connection} への連携設定の解除でエラーが発生しました。"
@@ -154,7 +118,6 @@ ja:
   find friends: "友だちを探す"
   search placeholder: "検索..."
   search: "検索"
-  more: "さらに"
   book: "書物"
   filter book: "書の名前から検索・・・"
   save: "保存する"
@@ -168,14 +131,17 @@ ja:
   chapter: "章"
   bible: "聖書"
   notes title: "ノート"
+  friends: "友だち"
   groups: "グループ"
   mobile: "モバイル"
   live: "ライブ/グループ"
   first page: "最初のページ"
   last page: "最後のページ"
+  next page: "次のページ"
+  previous page: "前のページ"
   invalid username or password: "ユーザー名、もしくは、パスワードに誤りがあります。"
   show all bookmarks: "%{total} 箇所のブックマークを全て表示"
-  show all notes: "全てのノートを見る"
+  show all notes: "%{total} 件のノートを全て表示"
   recent bookmarks: "最近登録したブックマーク"
   percentage display: "%{number}%"
   myself: "わたし"
@@ -186,115 +152,7 @@ ja:
   or:
     lower: "または"
     upper: "または"
-  moments:
-    vod:
-      title: "本日の聖句"
-    friendship:
-      now friends: "さんと友達になりました"
-    cta:
-      profile update text: "友達があなたを見つけるのを手伝う"
-      profile update button: "プロフィールの更新"
-      sharing text: "聖句をソーシャルネットワークでシェアする"
-      sharing button: "シェアを有効にする"
-      friends text: "友達の聖書の利用状況を見る"
-      friends button: "友だちを探す"
-    action:
-      go to scripture: "聖句を見る"
-      load more: "さらに読み込む"
-      like: "いいね！"
-      liked: "いいね！済み"
-      like title: "「いいね！」に入れる"
-      last comment: "前回のコメント"
-      share: "シェア"
-      share title: "友達または家族とシェアする"
-      comment: "コメント"
-      comment title: "全てのコメントを見る"
-      edit: "編集"
-      edit highlight title: "このハイライトを編集する"
-      edit bookmark title: "このブックマークを編集する"
-      edit note title: "このノートを編集する"
-      delete: "削除"
-      delete confirm: "本当にいいですか？"
-      delete highlight title: "このハイライトを削除する"
-      delete bookmark title: "このブックマークを削除する"
-      delete note title: "このノートを削除する"
-  notifications:
-    title: "通知"
-    none: "通知はありません"
-    no new: "新しい通知はありません"
-    view all: "全ての通知を見る"
-  likes:
-    create success: "成功！「いいね」が保存されました。"
-    create failure: "「いいね」が保存できませんでした。"
-    destroy success: "「いいね」が削除されました。"
-    destroy failure: "「いいね」が削除できませんでした。"
-  comments:
-    view all N: "全ての%{count}コメントを見る。"
-    post comment: "コメントを投稿する"
-    create success: "成功！コメントが表示されました。"
-    create failure: "コメントを投稿することができませんでした"
-    destroy success: "コメントが削除されました。"
-    destroy failure: "コメントが削除できませんでした。"
-    form:
-      save button: "投稿"
-  friends:
-    you have N friends: "%{count}人の友達がいます"
-    none me: "ブックマーク、ハイライト、ノートなど聖書から学んだことを親しい友達や家族にシェアしましょう"
-    find friends: "友だちを探す"
-    blank slate:
-      heading: "友達ではありません"
-      description: "友達リストの閲覧は友達だけに限定されています"
-    limit notice: "友達を最大150人まで登録できます"
-    limit description: "聖書アプリでの友達をよく知っている相手に限定することで、本音で会話でき、新しく発見したことをシェアできる環境を作ることができます。"
-  friendships:
-    find friends title: "友だちを探す"
-    search by name: "名前で検索"
-    search button: "検索"
-    widget:
-      find friends title: "友だちを探す"
-      search by name: "名前で検索"
-      search button: "検索"
-    offer success: "友達申請が送信されました"
-    offer failure: "友達申請の送信中にエラーが発生しました"
-    create success: "成功！友達になりました。"
-    create failure: "友達登録中にエラーが発生しました"
-    destroy success: "申請が断られました"
-    destroy failure: "申請却下中にエラーが発生しました"
-    requests title: "友達申請"
-    requests view all: "全ての友達申請を見る"
-    requests none: "友達申請はありません"
-    requests no new: "新規の友達申請はありません"
-    status:
-      pending: "申請保留中"
-      friends: "友達"
-    user wants friendship: "%{user} さんから友達申請が来ています"
-    user wants friendship partial: "友達申請が来ています"
-    form:
-      remove friend button: "友達を削除する"
-      remove friend button title: "この人を友達リストから削除する"
-      add friend button: "友達に追加"
-      add friend button title: " %{user} さんに友達申請を送信する"
-      accept button: "承認"
-      accept request button: "申請を承認する"
-      ignore button: "無視"
-      ignore request button: "申請を無視する"
   notes:
-    none user: "%{username} さんはまだノートがありません"
-    blank slate:
-      heading: "まだノートがありません"
-      description: "聖書を読んでいる時に、神様からの静かなささやきが聞こえたら、その思いをここに書き留めることができます。あなたのノートは標準設定では <em>非公開</em>となります。ノートを友達とシェアしたい場合は、ノートを開いて<em>「公開」</em>に変更してください。"
-    form:
-      title field: "タイトル:"
-      content field: "内容:"
-      highlight field: "ハイライト：　（選択可）"
-      reference field: "参照聖句:"
-      status field: "ステータス:"
-      save button: "保存"
-    status:
-      private: "非公開"
-      public: "公開"
-      friends: "友達のみ"
-      draft: "草稿"
     list title: "ノート"
     loading community: "コミュニティーのノートを読み込み中・・・"
     no community notes: "選択された聖句に関するコミュニティーノートはありません。ノートを作成するには、聖書リーダー内で聖句を選択し、リーダー上部の「選択箇所」というボタンをクリックしてください。"
@@ -302,7 +160,6 @@ ja:
     private: "非公開"
     is private: "ご希望のノートは非公開となっています。"
     draft: "草稿"
-    friends: "友達"
     creation form errors: "以下のエラーのためノートの作成ができませんでした:"
     reference field: "参照聖句:"
     version field: "訳："
@@ -323,10 +180,7 @@ ja:
     cancel: "キャンセル"
     pop out: "別ウィンドウで表示"
     none found: "ノートが見つかりません..."
-    create success: "成功！ノートが保存されました。"
-    create failure: "ノートの保存にエラーが発生しました"
-    destroy success: "ノートが削除されました"
-    destroy failure: "ノートの削除中にエラーが発生しました"
+    successfully deleted: "ノートが削除されました"
   ref:
     loading secondary: "参照聖句を2つ目の聖書訳で読み込み中・・・"
     clear verses: "選択箇所を解除する"
@@ -357,8 +211,6 @@ ja:
     profile form errors: "以下のエラーが原因でプロフィールの更新ができませんでした:"
     email address: "メールアドレス:"
     user name: "ユーザ名:"
-    first name: "名前（名）"
-    last name: "苗字（姓）"
     agreement: "YouVersion%{terms_link} に同意します。"
     terms and conditions: "利用規約"
     facebook sign up success: "すばらしい! Facebook の利用を許可しました。YouVersion でのユーザ名とパスワードを選択して、次へお進み下さい。"
@@ -376,7 +228,6 @@ ja:
     my profile: "わたしのプロフィール"
     edit profile: "プロフィールの編集"
     update profile: "プロフィールの更新"
-    go to your profile: "自分のプロフィールを見る"
     other user profile: "%{username}さんのプロフィール"
     my password: "パスワードを変更"
     edit password: "パスワードの変更"
@@ -389,7 +240,7 @@ ja:
     edit account_existence: "アカウントの削除"
     delete account button: "私のYouVersionアカウントを削除します"
     no devices: "YouVersionアカウントに連携されているデバイスはありません。"
-    no devices download copy: "オンライン聖書（YouVersion.com）に基づいた聖書アプリは無料の携帯用聖書で、ほぼ全ての携帯デバイスにインストールできます。聖書アプリでは、聖書を読んだり、シーシャル･ネットワーク上で聖句をシェアしたり、お気に入りの聖句にブックマークをつけたりと色々なことができ、携帯を活用したライフスタイルにピッタリです。お使いになっている携帯デバイスから<a href='https://www.bible.com/app'>bible.com/app</a>にいって、聖書アプリをダウンロードし、あなたのアカウントに連携させましょう！"
+    no devices download copy: "オンライン聖書（YouVersion.com）に基づいた聖書アプリは無料の携帯用聖書で、ほぼ全ての携帯デバイスにインストールできます。聖書アプリでは、聖書を読んだり、シーシャル･ネットワーク上で聖句をシェアしたり、お気に入りの聖句にブックマークをつけたりと色々なことができ、携帯を活用したライフスタイルにピッタリです。お使いになっている携帯デバイスから<a href='https://www.bible.com/download'>bible.com/download</a>にいって、聖書アプリをダウンロードし、あなたのアカウントに連携させましょう！"
     yes delete: "はい、私のアカウントを削除します"
     account delete success: "あなたのYouVersionアカウントが削除されました。今後も有意義な方法を用いて聖書の言葉に触れていかれますよう、お祈りいたします。参考までに、その他の便利なアプリをこちらからご覧ください。<a href='https://www.bible.com/free-bible-apps'>http://www.bible.com/free-bible-apps</a>"
     delete account description: "一旦アカウントを削除されますと、YouVersion.com及び聖書アプリ内にある全ての個人情報、履歴、パーソナライズしたもの(ノート、ブックマーク、ハイライトなど)が永久に削除されます。この手続きを無効にすることは、利用者側でも当方担当チームでも不可能です。ご理解のいただいた上でこの手続きを実行する場合は、以下にお進み下さい。"
@@ -403,7 +254,7 @@ ja:
     my badges: "マイ・バッジ"
     revised date: "最終更新日: %{date}"
     update email copy: "新しいメールアドレスを入力して、「メールアドレスを更新」をクリックしてください。新しいメールアドレスの確認リンクをメールで送信します。"
-    edit email: "メールアドレスを変更する"
+    edit email: "メールアドレスの更新"
     update email check: "メールをご覧の上、リンクをクリックして新規メールアドレスの確認を行ってください。"
     confirm update email success: "メールアドレスの更新を受け付けました！"
     confirm update email error: "申し訳ございませんが、メールアドレスの変更ができませんでした。"
@@ -504,16 +355,6 @@ ja:
       general title: "一般情報"
       general text: "完全合意 - この「利用規約」は、利用者のYouVersion の使用に関するLifeChurch.tv との完全な合意を構成し、YouVersion に関する利用者とLifeChurch.tv との間の従前の合意に取って代わるものです。これに加えて追加的な諸条件が課されることがあります。<br><br>準拠法、管轄裁判所について - この「利用規約」 及び、利用者とLifeChurch.tv との関係は、州の抵触法にかかわらず、オクラホマ州の法規に準拠します。利用者と LifeChurch.tv は、オクラホマ州オクラホマ郡内の裁判所の排他的対人管轄に服することに同意されたものとします。<br><br>権利放棄と 契約の可分性 - LifeChurch.tv がこの「利用規約」を実施・施行することを怠った場合にも、かかる権利または規定の放棄を意味するものではありません。管轄裁判所が「利用規約」の 特定の規定が無効であるとの判決を下した場合にも、裁判所は、当該規定に反映されている当事者の意向を 実行する努力をすべきであると当事者双方が同意するものとします。また、「利用規約」の他の規定の効力は維持されます。<br><br>生存者権・譲渡の禁止 - LifeChurch.tv のアカウントは譲渡できないこと、そして、LifeChurch.tv の利用者のIDへの権利またはアカウント内のコンテンツへの権利は利用者の死亡時に消滅することに同意されたものとします。死亡証明書 を受け取った時点で、LifeChurch.tv はお客様のアカウントを終止し、アカウント内のすべてのコンテンツを永久に削除 することができます。<br><br>時効 - 法令の定めがこれに異なる場合にも、YouVersion の使用またはこの「利用規約」から発生する、またはこれらに関連する申立てや訴訟は、その事由発生後1年以内に提訴しなければならず、これがなされない場合には、以後永久に提訴できない旨をご理解いただき、これに同意されたものとします。<br><br>この「利用規約」内の表題は、便宜上のものであって、法律上・契約上の効力はありません。\n"
     profile:
-      blank slate:
-        heading: "ここには（まだ）なにもありませんので、そのままお進みください"
-        description: "聖書または友達と連動させると、あなたがしてきたことの履歴がこのページに表示されます"
-      visit friend: "%{friend}さんのプロフィールを見る"
-      tab activity: "アクティビティ"
-      tab friends: "友達"
-      tab notes: "ノート"
-      tab bookmarks: "ブックマーク"
-      tab highlights: "ハイライト"
-      tab badges: "バッジ"
       first name: "名"
       last name: "姓"
       email: "メールアドレス"
@@ -553,10 +394,6 @@ ja:
       reading_plans: "利用中の読書プランに関する情報の通知を受ける"
       publishing partners: "YouVersionのコンテンツパートナーからのニュースを受け取る"
       update: "通知設定の更新"
-      friendships: "友達申請があれば通知する"
-      moments: "友達のアクティビティがあれば通知する"
-      comments: "私のアクティビティへのコメントがあれば通知する"
-      likes: "アクティビティの「いいね」を通知する"
   bookmarks:
     new: "新しいブックマーク"
     edit: "編集"
@@ -567,14 +404,12 @@ ja:
     all: " ブックマーク一覧"
     labels label: "ラベル:"
     title: "ブックマーク"
-    my labels: "ラベル"
     not found: "ブックマークを付けることにより、最後に読んだ箇所を思い出すことができたり、好きな聖句が書かれた箇所を見つけやすくなったり、あるいは、ある書物の中でどの章まで読んだかを思い出しやすくなります。ブックマークを付けるためには聖書リーダーの中で特定の箇所を選択し、ブックマークボタンをクリックします。"
     other user not found: "まだ %{username} さんのブックマークはありません"
     creation form errors: "以下のエラーが発生したために、ブックマークをつけることができませんでした。"
-    create success: "成功！ブックマークが保存されました。"
-    destroy success: "ブックマークが削除されました"
-    destroy failure: "ブックマークを削除する際にエラーが発生しました"
-    update success: "ブックマークが更新されました"
+    successfully created: "ブックマークを追加しました"
+    successfully deleted: "ブックマークが削除されました"
+    successfully updated: "ブックマークがアップデートされました"
     labels placeholder: "複数のラベルがある場合は、コンマで区切ってください"
     save: "ブックマークを保存"
     confirm delete: "間違いありません"
@@ -585,36 +420,10 @@ ja:
     update: "アップデート"
     color: "色:"
     version field: "聖書訳:"
-    none user: "%{username} さんはブックマークがありません"
-    blank slate:
-      heading: "意味深い聖句をブックマークする"
-      description: "聖書を読みながら、聖句を選んでブックマークできます。ここであなたのブックマークを閲覧・編集・削除できます。"
-    form:
-      title field: "タイトル:"
-      reference field: "参照聖句:"
-      labels field: "ラベル(コンマで区切ってください):"
-      highlight field: "ハイライト：（選択可）"
-      colors field: "色:"
-      update button: "ブックマークを更新"
-      save button: "ブックマークを保存"
   badges:
     earned a badge: "獲得したバッジ"
     user badges: "%{user} さんのバッジ"
-    earned date: "%{username} さんが%{ago}前に獲得"
-    none me: "まだバッジを獲得していません"
-    none user: "%{username} さんはまだバッジを獲得していません"
   plans:
-    widget:
-      my plans: "マイ・プラン"
-      start reading: "読書を開始"
-      view my plans: "読書プランを見る"
-      featured plans: "特集プラン"
-      view all plans: "全ての読書プランを見る"
-    settings: "設定"
-    privacy:
-      visible to friends?: "このプランでのあなたのアクティビティを友達に公開しますか？"
-      private: "非公開"
-      public: "公開"
     title: "読書プラン"
     browse by category: "カテゴリー別に閲覧する"
     browse plans: "%{category}プランを閲覧"
@@ -645,6 +454,7 @@ ja:
     no public plans: "%{username} さんには公開中のプランはありません"
     filter by lang: "言語でプランを絞り込む"
     plan settings: "プラン設定"
+    settings: "設定"
     search: "検索"
     search placeholder: "%{category}プラン内を検索"
     subscribe to plan: "このプランを開始"
@@ -757,20 +567,9 @@ ja:
     chapter only: "申し訳ありませんが、音読は節単位では利用できません。章単位で音読をリーダーで表示してください。"
     close player menu: "閉じる"
   highlights:
-    title: "ハイライト"
-    blank slate:
-      heading: "意味深い聖句をハイライトする"
-      description: "聖書を読みながら、聖句を選んでハイライトできます。ここであなたのハイライトを閲覧・編集・削除できます。"
-    none user: "%{username} さんはハイライトがありません"
     choose color: "色の選択"
-    create success: "成功！ハイライトが保存されました。"
-    create failure: "ハイライトを保存する際にエラーが発生しました"
-    destroy success: "ハイライトが削除されました"
-    destroy failure: "ハイライトを削除する際にエラーが発生しました"
     creation error: "申し訳ありませんが、ハイライトできません"
     delete error: "申し訳ありませんが、ハイライトを削除できません"
-    form:
-      save button: "ハイライトを保存する"
   searching:
     bible: "聖書"
     plans: "読書プラン"
@@ -779,7 +578,6 @@ ja:
     total results: "約 %{total} 件の検索結果"
     suggestion html: "もしかして %{suggestion_link} ですか?"
     all versions: "%{language_name}語版全て"
-    results for: "検索結果："
   donate:
     donate now: "寄付する"
     donate now intl: "PayPalで寄付する（米国外）"
@@ -949,6 +747,9 @@ ja:
     public domain: "パブリックドメイン"
     loading: "さらに聖書訳を読み込み中・・・"
     load error: "申し訳ございませんが、聖書訳の読み込み中に問題が発生しました。このメニューを一旦閉じて、改めて開いてみてください。"
+  reader help:
+    title: "聖句を選択…"
+    line 1: "聖句にブックマークしたり、ノートを記録したり、お友達とシェアするには、ご希望の聖句（複数可）をクリックまたはタップしてください。"
   campaigns:
     100m:
       logo: "YouVersion: 聖書アプリ"
@@ -978,9 +779,3 @@ ja:
       sidebar:
         tagline: "共に歴史を塗り替えましょう。"
         button: "聖書アプリをシェア"
-  ui:
-    pagination:
-      next page: "次のページ"
-      previous page: "前のページ"
-    datetime:
-      just now: "たった今"
