--- a/config/locales/lv.yml
+++ b/config/locales/lv.yml
@@ -32,13 +32,9 @@ lv:
     users username not available: "Jūs ievadītais lietotājvārds nav pieejams."
     users username or password invalid: "Lietotāja vārds vai parole, ko ievadījāt ir kļūdains."
     users username required: "Jums jāievada lietotājvārds."
-    users first name required: "Jums jāievada vārds."
-    users last name required: "Jums jāievada uzvārds."
-    moments content required: "Saturs nevar būt tukš."
   meta:
     kids_app:
       title: "Bībeles aplikācija bērniem"
-      description: "..."
     100million:
       title: "Tas sākas ar 100 miljoniem"
       description: "Bībeles aplikācija ir uzstādīta gandrīz 100 miljonu reižu - neticami! Bet mēs tikai sākam. Lejuplādē bezmaksas Bībeles aplikāciju šodien - un tad dalies ar aplikāciju ar saviem draugiem. Radīsim vēsturi kopā."
@@ -66,6 +62,7 @@ lv:
   new note: "Izveidot piezīmi"
   share success: "Jūs esat dalījušies ar savu ziņu."
   share error: "Piedodiet, daloties ar jūsu ziņu radās kļūme. Lūdzu mēģiniet vēlreiz."
+  google plus: "Google +"
   connect to: "Pieslēgties jūsu %{connection} kontam."
   deleted connection: "Jūs veiksmīgi atslēdzāties no %{connection}"
   deleted connection error: "Piedodiet, radās kļūda mēģinot atslēgties no jūsu konta %{connection}"
@@ -134,13 +131,17 @@ lv:
   chapter: "Nodaļa"
   bible: "Bībele"
   notes title: "Piezīmes"
+  friends: "Draugi"
   groups: "Grupas"
   mobile: "mobilais"
   live: "Tīešsaiste/Grupas"
   first page: "Pirmā lapa"
   last page: "Pēdējā lapa"
+  next page: "Nākamā lapa"
+  previous page: "Iepriekšējā lapa"
   invalid username or password: "Nederīgs lietotājvārds vai parole"
   show all bookmarks: "Parādīt visas %{total} grāmatzīmes"
+  show all notes: "Parādīt visas %{total} piezīmes"
   recent bookmarks: "Pēdējās grāmatzīmes"
   percentage display: "%{number}%"
   myself: "Es"
@@ -151,106 +152,7 @@ lv:
   or:
     lower: "vai"
     upper: "Vai"
-  moments:
-    vod:
-      title: "Dienas pants"
-    friendship:
-      now friends: "Tagad tu esi draugos ar"
-    cta:
-      profile update text: "Palīdzi saviem draugiem atrast sevi."
-      profile update button: "Atjauno profila informāciju"
-      sharing text: "Koplieto ar rakstu vietām caur sociālajiem tīkliem"
-      sharing button: "Iespējo koplietošanu"
-      friends text: "Apskati ko dara tavi draugi Bībelē"
-      friends button: "Atrodi draugus"
-    action:
-      go to scripture: "Doties uz rakstu vietu"
-      load more: "Ielādēt vēl"
-      like: "Patīk"
-      liked: "Patīk"
-      like title: "Atzīmēt ka patīk"
-      share: "Dalīties"
-      share title: "Dalies ar saviem draugiem vai ģimeni"
-      comment: "Komentārijs"
-      comment title: "Skatīt visus kometārus"
-      edit: "Rediģēt"
-      edit highlight title: "Rediģēt izcelto"
-      edit bookmark title: "Rediģēt grāmatzīmi"
-      edit note title: "Rediģēt piezīmi"
-      delete: "Dzēst"
-      delete confirm: "Vai esi pārliecināts?"
-      delete highlight title: "Dzēst izcelto"
-      delete bookmark title: "Izdzēst šo grāmatzīmi"
-      delete note title: "Dzēst piezīmi"
-  notifications:
-    title: "Paziņojumi"
-    none: "Tev nav paziņojumu"
-    no new: "Nekādu paziņojumu"
-    view all: "Skatīt visus paziņojumus"
-  likes:
-    create failure: "Nevarēja saglabāt tavu \"Patīk\""
-    destroy success: "\"Patīk\" izdzēsts"
-    destroy failure: "Tavs \"Patīk\" netika izdzēsts"
-  comments:
-    view all N: "Apskatīt visus %{count} komentārus"
-    post comment: "Ieraksti komentāru"
-    create failure: "Komentārs nevarēja tikt ierakstīts"
-    destroy success: "Komentārs izdzēsts"
-    destroy failure: "Komentāru nevarēja izdzēst"
-    form:
-      save button: "Ieraksti"
-  friends:
-    you have N friends: "Tev ir %{count} draugu"
-    none me: "Koplieto kas tev svarīgs Bībelē kā piemēram grāmatzīmes, izcelto un piezīmes ar saviem draugiem un ģimeni."
-    find friends: "Atrodi draugus"
-    blank slate:
-      heading: "Pašlaik nav draugi"
-      description: "Tev jābūt draugos ar šo personu lai redzētu viņa draugus."
-    limit notice: "Tev var būt kaut vai 150 draugu"
-    limit description: "Ierobežojot draudzību Bībeles aplikācijā ar draugiem, kas ir labi pazīstami rada vidi, kas ir atvērta godīgām sarunām un koplietotām atklāsmēm ar uzticamiem draugiem."
-  friendships:
-    find friends title: "Atrodi draugus"
-    widget:
-      find friends title: "Atrodi draugus"
-    offer success: "Draudzības uzaicinājums nosūtīts"
-    offer failure: "Kļūme nosūtot draudzības uzaicinājumu"
-    create failure: "Notika kļūme veidojot draudzību"
-    destroy success: "Uzaicinājums noraidīts"
-    destroy failure: "Notika kļūme uzaicinājuma noraidīšanā"
-    requests title: "Drauga pieprasījums"
-    requests view all: "Skatīt visus draugu pieprasījumus"
-    requests none: "Tev nav neviena draudzības uzaicinājuma"
-    requests no new: "Nekādu jaunu uzaicinājumu"
-    status:
-      pending: "Uzaicinājums ir procesā"
-      friends: "Draugi"
-    user wants friendship: "%{user} grib būt tavs draugs"
-    user wants friendship partial: "grib būt tavs draugs"
-    form:
-      remove friend button: "Dzēst draugu"
-      remove friend button title: "Izdēst šo personu no sava draugu saraksta"
-      add friend button: "Pievienot draugu"
-      add friend button title: "Nosūtīt %{user} draudzības uzaicinājumu"
-      accept button: "Apstiprināt"
-      accept request button: "Apstiprināt pieprasījumu"
-      ignore button: "Ignorēt"
-      ignore request button: "Ignorēt pieprasījumu"
   notes:
-    none user: "%{username} nav veicis piezīmes."
-    blank slate:
-      heading: "Tev vēl nav piezīmju"
-      description: "Lasot Bībeli, kad sadzirdi Dieva mazo, kluso balsi runājam, tad vari ātri saglabāt savas pārdomas šeit. Tavas piezīmes tiks atzīmētas kā <em>privāts</em> pēc noklusējuma. Ja vēlies koplietot savu piezīmi ar draugiem, tad vienkārši atver to un nomaini uz <em>publisks</em>."
-    form:
-      title field: "Nosaukums:"
-      content field: "Saturs:"
-      reference field: "Atsauce(s):"
-      status field: "Statuss:"
-      save button: "Saglabāt"
-    status:
-      private: "Privāts"
-      public: "Publisks"
-      friends: "Tikai draugi"
-      draft: "Melnraksts"
     list title: "Piezīmes"
     loading community: "Ielādējam kopienas piezīmes..."
     no community notes: "Nekādas kopienes piezīmes atbilstošas šai rakstu vietai netika atrastas. Lai izveidotu piezīmi, izvēlēties rakstu vietu Bībeles lasīšans logā un tad piespiediet izvēlēto pogu lasīšanas ekrāna augšdaļā."
@@ -258,7 +160,6 @@ lv:
     private: "Privāts"
     is private: "Pieprasītā piezīme ir privāta"
     draft: "Melnraksts"
-    friends: "Draugi"
     creation form errors: "Sekojošu iemesla(-u) dēļ, nevarējām izveidot piezīmi:"
     reference field: "Atsauce(s):"
     version field: "Versija:"
@@ -279,9 +180,7 @@ lv:
     cancel: "Atcelt"
     pop out: "Jaunā logā"
     none found: "Nav atrastas piezīmes"
-    create failure: "Kļūme saglabājot piezīmi"
-    destroy success: "Piezīme dzēsta."
-    destroy failure: "Kļūme dzēšot piezīmi"
+    successfully deleted: "Piezīme izdzēsta"
   ref:
     loading secondary: "Ielādē atsauci otrajā tulkojumā..."
     clear verses: "Attīrīt izvēlētos pantus"
@@ -312,8 +211,6 @@ lv:
     profile form errors: "Sekojošas kļūdas(u) dēļ jūsu profila atjaunošana ir atcelta:"
     email address: "E-pasts"
     user name: "Lietotājvārds"
-    first name: "Vārds"
-    last name: "Uzvārds"
     agreement: "Es piekrītu YouVersion noteikumiem %{terms_link}."
     terms and conditions: "nosacījumi un apstķļi"
     facebook sign up success: "Super! Tu esi autorizējies ar Facebook. Izvēlies savu YouVersion lietotājvārdu un paroli, lai turpinātu."
@@ -343,7 +240,6 @@ lv:
     edit account_existence: "Izdzēst kontu"
     delete account button: "Izdzēst manu YouVersion kontu"
     no devices: "Neviena ierīce nav pievienota YouVersion kontam"
-    no devices download copy: "Balstoties uz tiešsaistes Bībeli YouVersion, Bībeles aplikācija ir bezmaksas mobilā Bībele, kas var tikt uzinstalēt uz gandrīz jebkura telefona. Bībeles aplikācija ļauj lietotājiem lasīt Bībeli, dalīties ar rakstu vietām caur sociāliem tīkliem, izveidot grāmatzīmes un vairāk&mdash;viss, formātā, kas spēj turēt līdzi viņu pieaugošajam mobilajam dzīvesveidam. Apmeklē <a href='https://www.bible.com/app'>bible.com/app</a> no savas ierīces lai lejupielādētu Bībeles Aplikāciju un pievienotu savu kontu!"
     yes delete: "Jā, izdzēst manu kontu"
     account delete success: "Jūsu YouVersion konts ir veiksmīgi dzēsts. Mēs ceram jūs turpināsiet meklēt jēgpilnus veidus kā mijiedarboties ar Bībeli. Dažas no šīm aplikācijām varētu jums palīdzēt doties tālāk: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
     delete account description: "Ja jūs izdzēsīsiet savu kontu, jūs neatgriezeniski izdzēsīsiet visu savu informāciju, vēsturi un personalizāciju (kā, piemēram, piezīmes, grāmatzīmes, izcēlumus u.c.) gan YouVersion.com, gan Bībeles aplikācijā. Šo darbību nevar atgriezt nedz jūs, nedz arī mūsu komanda. Ja jūs esat pārliecināts, ka vēlaties doties tālāk, lūdzu turpiniet zemāk."
@@ -357,7 +253,7 @@ lv:
     my badges: "Manas nozīmītes"
     revised date: "Pēdējo reizi pārbaudīts %{date}"
     update email copy: "Ievadiet jaunu e-pasta adresi un nospiediet \"Atjunot e-pastu\". Mēs jums nosūtīsim saiti lai apstiprinātu jauno e-pasta adresi."
-    edit email: "Nomainīt e-pasta adresi"
+    edit email: "Atjaunot e-pasta adresi"
     update email check: "Lūdzu pārbaudiet savu e-pastu un uzspiediet uz saites lai apstiprinātu jūsu jauno e-pastu."
     confirm update email success: "Paldies. Jūs esat atjaunojis savu e-pasta adresi."
     confirm update email error: "Piedodiet, radās kļūme atjaunojot jūsu e-pasta adresi."
@@ -458,16 +354,6 @@ lv:
       general title: "Vispārēja informācija"
       general text: "Pilnā vienošanās. Šie Lietošanas Noteikumi apkopo visu vienošanos starp jums un LifeChurch.tv un nosaka jūsu YouVersion lietošanu, aizstājot jebkādas iepriekšējās vienošanās starp jums un LifeChurch.tv attiecībā uz YouVersion. Jūs arī varat tikti pakļauti papildus noteikumiem un nosacījumiem.<br><br>Tiesas un likuma izvēle. Lietošanas noteikumi attiecības starp jums un LifeChurch.tv tiks reglamentēti pēc Oklahomas štata likumiem bez konfliktēšanas ar likumiem. Jūs un LifeChurch.tv piekrītat pakļauties personīgajai un apgabala jurisdikcijai Oklahoma apgabalā, Oklahoma.<br><br>Noteikumu nodalīšana un atteikšanās. LifeChurch.tv nespēja pielietot vai piemērot jebkādas tiesības vai nodrošināt šo Lietošanas Noteikumu TERMS OF USE nav uzskatāms par atteikšanos no šādām tiesībām vai noteikumiem. Ja jebkāda šo Lietošanas Noteikumu nodrošināšana pēc jurisdikcijā esošās personas atzinuma tiek konstatēta par spēkā neesošu, puses tomēr piekrīt, ka tiesai būtu jcenšas rast risinājumu' nodomiem, kas atspoguļoti noteikumos, un citi nosacījumi  Lietošanas noteikumos paliek pilnā spēkā un darbībā.<br><br>Bez sagādāšanas un tālāk nodošanas tiesībām. Jūs piekrītat ka LifeChurch.tv konts ir nenododams tālāk, un jebkādas tiesības jūsu LifeChurch.tv ID saturam izbeidzas ar jūsu nāvi. Saņemot miršanas apliecības kopiju, LifeChurch.tv var likvidēt jūsu kontu un pilnībā izdzēst visu tā saturu.<br><br>Ierobežojumu noteikumi. Jūs saprotat un piekrītat ka neatkarīgi no noteikumiem vai likuma par pretējo, visas prasības, kas celtas no vai saistītas ar YouVersion lietošanu vai Lietošanas noteikumiem jābūt aizpildītiem (1) gada laikā kopš šāda prasība vai pieteikuma iesniegšanas vai iestāsies noilgums.<br><br>Paragrāfu nosaukumi Lietošanas noteikumiem ir tikai ērtībai un tiem nav nekāda juridiska vai līgumsaistoša spēka."
     profile:
-      blank slate:
-        heading: "Dodies tālāk, šeit nav ko redzēt (pagaidām)"
-        description: "Sāc lietot Bībeli vai mijiedarbojies ar saviem draugiem un šeit tiks uzrādīta tavas aktivitātes vēsture."
-      visit friend: "Apmeklē %{friend}'s profilu"
-      tab activity: "Aktivitāte"
-      tab friends: "Draugi"
-      tab notes: "Piezīmes"
-      tab bookmarks: "Grāmatzīmes"
-      tab highlights: "Izceltais"
-      tab badges: "Piespraudes"
       first name: "Vārds"
       last name: "Uzvārds"
       email: "E-pasts"
@@ -507,9 +393,6 @@ lv:
       reading_plans: "Informēt mani par plāniem, kurus lasu."
       publishing partners: "Turiet mani informētu par jaunumiem no YouVersion satura partneriem."
       update: "Atjaunot paziņojumus"
-      friendships: "Informēt mani par draudzības uzaicinājumiem"
-      moments: "Informēt mani par draugu aktivitāti"
-      comments: "Komentāri par manu aktivitāti"
   bookmarks:
     new: "Jauna grāmatzīme"
     edit: "Labot"
@@ -523,9 +406,9 @@ lv:
     not found: "Grāmatzīmes palīdzēs ātrāk atrast jūsu mīļākās rakstu vietas, vai arī pēdējo nodaļu, kuru lasījāt. Lai pievienotu grāmatzīmi, izvēlieties Bībeles pantu un nospiediet izvēlēto pogu ekrāna aukšdaļā.."
     other user not found: "%{username} nav saglabājis nevienu grāmatzīmi."
     creation form errors: "Sekojoša kļūme(s) novērsa grāmatzīmes izveidošanu:"
-    destroy success: "Grāmatīme izdzēsta"
-    destroy failure: "Kļūme dzēšot grāmatzīmi"
-    update success: "Grāmatzīme atjaunota"
+    successfully created: "Grāmatzīme pievienota."
+    successfully deleted: "Grāmatīme izdzēsta"
+    successfully updated: "Grāmatzīme atjaunota"
     labels placeholder: "Atdaliet iezīmes ar komatiem."
     save: "Saglābāt grāmatzīmi"
     confirm delete: "Jā, esmu pārliecināts"
@@ -536,32 +419,10 @@ lv:
     update: "Atjauninājums"
     color: "Krāsa:"
     version field: "Tulkojums:"
-    none user: "%{username} nav nevienas grāmatzīmes"
-    blank slate:
-      heading: "Izveido grāmatzīmes jēgpilnām rakstu vietām"
-      description: "Kamēr lasi Bībeli, izvēlies pantu un izveido grāmatzīmi. Atgriezies šeit lai pārskatītu, rediģētu vai dzēstu savu grāmatzīmi."
-    form:
-      title field: "Nosaukums:"
-      reference field: "Atsauce:"
-      labels field: "Marķējumi (ar komatu atdalītie):"
-      colors field: "Krāsa:"
-      update button: "Atjaunināt grāmatzīmi"
-      save button: "Saglabāt grāmatzīmi"
   badges:
     earned a badge: "Nopelnīta nozīmīte"
     user badges: "%{user} nozīmītes"
-    earned date: " %{username} nopelnīja %{ago} atpakaļ"
-    none me: "Jūs vēl neesat nopelnījis nevienu nozīmīti."
-    none user: "%{username} nav nopelnījis nevienu nozīmīti vēl."
   plans:
-    widget:
-      my plans: "Mans plāns"
-      start reading: "Sākt lasīt"
-    settings: "Uzstādījumi"
-    privacy:
-      visible to friends?: "Vai tu vēlētos, lai tava aktivitāte šajā lasīšanas plānā būtu redzama taviem draugiem?"
-      private: "Privāts"
-      public: "Publisks"
     title: "Lasīšanas plāni"
     browse by category: "Izvēlēties pēc kategorijas"
     browse plans: "Apskatīt %{category} plānus. "
@@ -592,6 +453,7 @@ lv:
     no public plans: "%{username} nav redzami nekādi lasīšanas plāni."
     filter by lang: "Atlasīt plānus pēc valodas"
     plan settings: "Lasīšanas plāna uzstādījumi"
+    settings: "Uzstādījumi"
     search: "Meklēšana"
     search placeholder: "Meklēt %{category} plānu"
     subscribe to plan: "Sākt šo plānu"
@@ -704,28 +566,17 @@ lv:
     chapter only: "Piedodiet, audio nav pieejams pantiem. Skatieties \"Lasīšanas logā\" nodaļas audio ierakstu."
     close player menu: "Aizvērt"
   highlights:
-    title: "Izceltais"
-    blank slate:
-      heading: "Izcel jēgpilnas rakstu vietas"
-      description: "Kamēr lasi Bībeli, izvēlies pantu un izcel to. Atgriezies šeit lai pārskatītu, rediģētu vai dzēstu izcelto."
-    none user: "%{username} neko nav izcēlis"
     choose color: "Izvēlies krāsu"
-    create failure: "Kļūme saglabājot izcelto"
-    destroy success: "Izceltais izdzēsts"
-    destroy failure: "Kļūme dzēšot izcelto"
     creation error: "Piedodiet, nav iespējams izcelt"
     delete error: "Piedodiet, nespējām notīrīt izcelto."
-    form:
-      save button: "Saglabāt izcelto"
   searching:
     bible: "Bībele"
-    plans: "Plāni"
+    plans: "Lasīšanas plāni"
     users: "Lietotāji"
     notes: "Piezīmes"
     total results: "Par %{total} rezultātiem"
     suggestion html: "Vai jūs domājāt %{suggestion_link}?"
     all versions: "Visi tulkojumi %{language_name}"
-    results for: "Meklēt rezultātu:"
   donate:
     donate now: "Ziedo tagad"
     donate now intl: "vai ziedojiet starptautiski"
@@ -895,6 +746,9 @@ lv:
     public domain: "Publiskais domēns"
     loading: "Ielādē vairāk tulkojumus..."
     load error: "Atvainojamies, radās kļūme ielādējot citus tulkojumus. Mēģiniet vēlreiz, aiztaisot šo izvēlni un attaisot to no jauna."
+  reader help:
+    title: "Izvēlēties rakstu vietu..."
+    line 1: "Uzklikšķini vai piespied uz jebkuras rakstu vietas vai rakstu vietu kopuma, lai izveidotu grāmatzīmi, iezīmēt, izveidot piezīmi vai lai dalītos ar saviem draugiem!"
   campaigns:
     100m:
       logo: "YouVersion: Bībeles aplikācija"
@@ -924,9 +778,3 @@ lv:
       sidebar:
         tagline: "Veidosim vēsturi kopīgi"
         button: "Dalies caur Bībeles aplikāciju"
-  ui:
-    pagination:
-      next page: "Nākamā lapa"
-      previous page: "Iepriekšējā lapa"
-    datetime:
-      just now: "tikai tagad"
