--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1,9 +1,5 @@
 ru:
   social:
-    intro page:
-      main heading: "Общение"
-    moment:
-      read less: "Свернуть"
     share: "Поделиться"
     my connections: "Подключенные аккаунты"
     connected as: "Вы подключены к %{connection} как %{username}."
@@ -36,13 +32,9 @@ ru:
     users username not available: "Выбранное имя пользователя уже занято."
     users username or password invalid: "Имя пользователя или пароль введены неверно."
     users username required: "Необходимо ввести имя пользователя."
-    users first name required: "Необходимо ввести имя."
-    users last name required: "Необходимо ввести фамилию."
-    moments content required: "Введите текст"
   meta:
     kids_app:
       title: "Приложение Библия для детей"
-      description: "..."
     100million:
       title: "Всё начинается со 100 млн"
       description: "Приложение Библия было установлено почти 100 млн раз — это просто невообразимо! И мы только начинаем! Установите бесплатное приложение сегодня и поделитесь ссылкой на приложение с друзьями. Давайте вместе творить историю!"
@@ -126,7 +118,6 @@ ru:
   find friends: "Найти друзей"
   search placeholder: "Поиск..."
   search: "Искать"
-  more: "Далее"
   book: "Книга"
   filter book: "Фильтр по книгам..."
   save: "Сохранить"
@@ -140,13 +131,17 @@ ru:
   chapter: "Глава"
   bible: "Библия"
   notes title: "Заметки"
+  friends: "Друзья"
   groups: "Группы"
   mobile: "Приложения"
   live: "Live / Группы"
   first page: "Первая страница"
   last page: "Последняя страница"
+  next page: "След. страница"
+  previous page: "Пред. страница"
   invalid username or password: "Неверное имя пользователя или пароль."
   show all bookmarks: "Показать все закладки: %{total}"
+  show all notes: "Показать все заметки: (%{total})"
   recent bookmarks: "Последние закладки"
   percentage display: "%{number}%"
   myself: "Я"
@@ -157,106 +152,7 @@ ru:
   or:
     lower: "или"
     upper: "ИЛИ"
-  moments:
-    vod:
-      title: "Стих дня"
-    friendship:
-      now friends: "Вы теперь друзья с"
-    cta:
-      profile update text: "Помогите друзьям найти вас"
-      profile update button: "Обновить профиль"
-      sharing text: "Поделиться стихами через социальные сети"
-      sharing button: "Включить социальные функции"
-      friends text: "Посмотреть моменты друзей в Библии."
-      friends button: "Найти друзей"
-    action:
-      go to scripture: "Перейти к месту Писания"
-      load more: "Показать ещё"
-      like: "Мне нравится"
-      liked: "Добавлено в избранное:"
-      like title: "Нравится"
-      share: "Поделиться"
-      share title: "Поделиться с друзьями и семьёй"
-      comment: "Оставить комментарий"
-      comment title: "Все комментарии"
-      edit: "Правка"
-      edit highlight title: "Редактировать маркер"
-      edit bookmark title: "Редактировать закладку"
-      edit note title: "Редактировать заметку"
-      delete: "Удалить"
-      delete confirm: "Вы уверены?"
-      delete highlight title: "Удалить маркер"
-      delete bookmark title: "Удалить закладку"
-      delete note title: "Удалить заметку"
-  notifications:
-    title: "Уведомления"
-    none: "Уведомлений нет"
-    no new: "Новых уведомлений нет"
-    view all: "Все уведомления"
-  likes:
-    create failure: "Нельзя поставить лайк"
-    destroy success: "Лайк удалён"
-    destroy failure: "Нельзя удалить лайк"
-  comments:
-    view all N: "Все комменатрии: %{count}"
-    post comment: "Комментировать"
-    create failure: "Комментарий не может быть отправлен"
-    destroy success: "Комментарий удалён"
-    destroy failure: "Комментарий не может быть удалён"
-    form:
-      save button: "Отправить"
-  friends:
-    you have N friends: "Друзей: %{count}"
-    none me: "Делитесь моментами из Библии, например, закладками, маркерами и заметками, со своими близкими и друзьями."
-    find friends: "Найти друзей"
-    blank slate:
-      heading: "Пока не друзья"
-      description: "Просмотр друзей возможен только для тех, кто ваш друг."
-    limit notice: "У вас может быть 150 друзей"
-    limit description: "Ограничивая дружбу в приложении Библия теми, кого вы знаете и кому доверяете, вы создадите среду для честного общения и сможете открыто делиться своими мыслями."
-  friendships:
-    find friends title: "Найти друзей"
-    widget:
-      find friends title: "Найти друзей"
-    offer success: "Запрос в друзья отправлен"
-    offer failure: "Ошибка при отправлении запроса дружбы"
-    create failure: "Ошибка дружбы"
-    destroy success: "Запрос отклонён"
-    destroy failure: "Ошибка отклонения дружбы"
-    requests title: "Запросы в друзья"
-    requests view all: "Все запросы в друзья"
-    requests none: "У вас нет входящих запросов"
-    requests no new: "Новых запросов нет"
-    status:
-      pending: "Ожидающие запросы"
-      friends: "Друзья"
-    user wants friendship: "%{user} хочет стать вашим другом"
-    user wants friendship partial: "хочет стать вашим другом"
-    form:
-      remove friend button: "Удалить"
-      remove friend button title: "Удалить из списка друзей"
-      add friend button: "Добавить друга"
-      add friend button title: "Отправить %{user} запрос дружбы"
-      accept button: "Принять"
-      accept request button: "Стать друзьями"
-      ignore button: "Игнорировать"
-      ignore request button: "Игнорировать"
   notes:
-    none user: "%{username} ещё не создавал заметок."
-    blank slate:
-      heading: "У вас пока нет ни одной заметки"
-      description: "Вы сможете легко записать свои мысли здесь, если услышите тихий, спокойный голос Божий во время чтения Библии. Ваши заметки будут помечены по умолчанию как <em>личные</em>. Если вы захотите поделиться ими с друзьями, просто откройте их и измените статус на <em>публичные</em>."
-    form:
-      title field: "Название:"
-      content field: "Текст заметки:"
-      reference field: "Ссылки:"
-      status field: "Статус:"
-      save button: "Сохранить"
-    status:
-      private: "Личная"
-      public: "Публичная"
-      friends: "Только для друзей"
-      draft: "Черновик"
     list title: "Заметки"
     loading community: "Загружаю заметки сообщества..."
     no community notes: "К выбранным стихам сообщество не написало ещё ни одной заметки. Для создания заметки выберите стих в окне чтения Библии, а затем нажмите кнопку \"Выбранное\" в верхней части окна чтения."
@@ -264,7 +160,6 @@ ru:
     private: "Личная"
     is private: "Заметка закрыта для просмотра."
     draft: "Черновик"
-    friends: "Друзья"
     creation form errors: "Вы не смогли создать заметку, по следующим причинам:"
     reference field: "Ссылки:"
     version field: "Перевод:"
@@ -285,9 +180,7 @@ ru:
     cancel: "Отменить"
     pop out: "В новом окне"
     none found: "Заметок не найдено..."
-    create failure: "Ошибка сохранения закладки"
-    destroy success: "Заметка удалена"
-    destroy failure: "Ошибка удаления"
+    successfully deleted: "Заметка удалена"
   ref:
     loading secondary: "Загружаю ссылки в параллельном переводе..."
     clear verses: "Очистить выделение"
@@ -318,8 +211,6 @@ ru:
     profile form errors: "Ваш профиль не был обновлён по следующим причинам:"
     email address: "Адрес эл. почты"
     user name: "Имя пользователя"
-    first name: "Имя"
-    last name: "Фамилия"
     agreement: "Я прочитал %{terms_link} YouVersion.com и согласен с ними."
     terms and conditions: "Условия пользования и политика конфиденциальности"
     facebook sign up success: "Отлично! Вы вошли с помощью Facebook. Чтобы продолжить, выберите имя пользователя YouVersion и пароль."
@@ -349,7 +240,7 @@ ru:
     edit account_existence: "Удалить аккаунт"
     delete account button: "Удалить мой аккаунт YouVersion"
     no devices: "К вашему аккаунту не подключено никаких устройств"
-    no devices download copy: "Основанное на онлайн Библии YouVersion, Приложение Библия является бесплатной мобильной Библией, которая может быть установлена ​​практически на любой телефон. Приложение Библия позволяет пользователям читать Библию, делиться стихами через социальные сети, добавлять в закладки любимые места и многое другое — и всё это доступно в формате, идущем в ногу с всё более мобильным образом жизни современного человека. Посетите <a href='https://www.bible.com/ru/app'>bible.com/app</a> со своего мобильного устройства, чтобы загрузить приложение Библия и подключить свой аккаунт!"
+    no devices download copy: "Основанное на онлайн Библии YouVersion.com, Приложение Библия является бесплатной мобильной Библией, которая может быть установлена ​​практически на любой телефон. Приложение Библия позволяет пользователям читать Библию, делиться стихами через социальные сети, добавлять в закладки любимые места и многое другое — и все это доступно в формате, идущем в ногу с всё более мобильным образом жизни современного человека. Посетите <a href='https://www.bible.com/ru/download'>bible.com/download</a> со своего мобильного устройства, чтобы загрузить приложение Библия и подключить свой аккаунт!"
     yes delete: "Да, удалить"
     account delete success: "Ваш аккаунт YouVersion был успешно удалён. Мы надеемся, что вы продолжите искать пути взаимодействия с Библией. Некоторые из этих приложений могут быть полезны в вашем продвижении: <a href= https://www.bible.com/free-bible-apps>http://www.bible.com/free-bible-apps </a>"
     delete account description: "Если вы удалите аккаунт, то полностью уничтожите всю информацию о себе, историю использования YouVersion и персональные данные (заметки, закладки, выделение цветом и т.д.) на YouVersion.com и в приложении Библия. Это действие не может быть отменено вами или сотрудниками нашей команды. Если вы уверены, что хотите продолжить, введите пароль и нажмите кнопку ниже."
@@ -363,7 +254,7 @@ ru:
     my badges: "Мои значки"
     revised date: "Последний раз редактировалось %{date}"
     update email copy: "Введите новый адрес электронной почты и нажмите \"Изменить email\". Мы вышлем Вам письмо со ссылкой для подтверждения нового адреса электронной почты."
-    edit email: "Изменить адрес email"
+    edit email: "Изменить email"
     update email check: "Пожалуйста, проверьте email и перейдите по ссылке, чтобы подтвердить Ваш новый адрес."
     confirm update email success: "Спасибо! Вы обновили свой адрес email."
     confirm update email error: "Извините, при обновлении адреса email возникла ошибка."
@@ -464,16 +355,6 @@ ru:
       general title: "Общая информация"
       general text: "Исчерпывающее соглашение. Настоящие УСЛОВИЯ ОБСЛУЖИВАНИЯ являются исчерпывающим соглашением между Вами и LifeChurch.tv, регламентируют использование Вами YouVersion и заменяют собой все предыдущие договоренности между Вами и LifeChurch.tv касательно YouVersion. Вы можете также подпадать по действие дополнительных условий и положений.<br><br>Выбор законодательства и юрисдикции. УСЛОВИЯ ОБСЛУЖИВАНИЯ и отношения между Вами и LifeChurch.tv регламентируются законами штата Оклахома, без учета конфликта норм права. Вы и LifeChurch.tv соглашаетесь подчиниться персональной и исключительной юрисдикции судов, расположенных в округе Оклахома штата Оклахома.<br><br>Отказ от права требования и частичная недействительность положений УСЛОВИЙ. Неиспользование или неприведение в исполнение LifeChurch.tv какого-либо из положений УСЛОВИЙ или прав, предоставляемых настоящими УСЛОВИЯМИ, не означает отказа от права требования в связи с данным правом или положением. Если какое-либо положение УСЛОВИЙ признано судом компетентной юрисдикции недействительным, то стороны тем не менее согласны с тем, что суд должен привести в исполнение намерения сторон, отраженные в этом положении, и что другие положения УСЛОВИЙ продолжают действовать в полной мере и в полную силу.<br><br>Недействительность права наследования и отсутствие права передачи другому лицу. Вы согласны с тем, что Ваша учетная запись LifeChurch.tv не может быть передана другому лицу и что все права на Ваш Логин LifeChurch.tv или содержимое Вашей учетной записи прекращаются в случае Вашей смерти. По получении копии Вашего свидетельства о смерти LifeChurch.tv может прекратить действие Вашей учетной записи и навсегда стереть ее содержимое.<br><br>Исковая давность. Вы понимаете и согласны с тем, что, вне зависимости от любых постановлений или законов, любое требование или иск, связанные с или возникающие в связи с использованием YouVersion или настоящими УСЛОВИЯМИ ОБСЛУЖИВАНИЯ, должны быть начаты в течение одного (1) года с момента возникновения требования или основания для иска, или погашены навсегда.<br><br>Заголовки пунктов в УСЛОВИЯХ ОБСЛУЖИВАНИЯ служат исключительно для удобства и не имеют юридической или контрактной силы."
     profile:
-      blank slate:
-        heading: "Здесь пока ничего нет"
-        description: "Начните взаимодействовать с Библией и друзьями, и здесь вы найдёте историю ваших действий."
-      visit friend: "Посмотреть профиль %{friend}"
-      tab activity: "Последние действия"
-      tab friends: "Друзья"
-      tab notes: "Заметки"
-      tab bookmarks: "Закладки"
-      tab highlights: "Маркеры"
-      tab badges: "Значки"
       first name: "Имя"
       last name: "Фамилия"
       email: "Эл. почта"
@@ -513,9 +394,6 @@ ru:
       reading_plans: "Уведомлять меня о начатых мною планах чтения."
       publishing partners: "Держать меня в курсе новостей от партнёров YouVersion."
       update: "Сохранить"
-      friendships: "Уведомлять меня о запросах в друзья"
-      moments: "Уведомлять меня об активности друзей"
-      comments: "Уведомлять меня о комментариях о моей активности"
   bookmarks:
     new: "Новая закладка"
     edit: "Редактировать"
@@ -529,9 +407,9 @@ ru:
     not found: "Закладки позволят Вам быстро переходить к понравившимся отрывкам или к последней прочитанной главе в отдельно взятой книге. Чтобы добавить закладку, выберите стих в Окне чтения и нажмите на кнопку \"Выбранное\"."
     other user not found: "%{username} ещё не создавал закладок."
     creation form errors: "При создании закладки возникли следующие ошибки:"
-    destroy success: "Закладка удалена"
-    destroy failure: "Не удалось удалить закладку"
-    update success: "Закладка обновлена"
+    successfully created: "Закладка создана"
+    successfully deleted: "Закладка удалена"
+    successfully updated: "Закладка обновлена"
     labels placeholder: "Добавьте ярлыки через запятую."
     save: "Сохранить закладку"
     confirm delete: "Да, удалить"
@@ -542,32 +420,10 @@ ru:
     update: "Сохранить"
     color: "Цвет:"
     version field: "Перевод "
-    none user: "У %{username} нет закладок"
-    blank slate:
-      heading: "Поместить в закладки стихи, через которые Господь говорил с вами"
-      description: "Во время чтения Библии вы можете выбрать стихи и добавить их в закладки. Просмотреть, изменить или удалить закладки можно на этой странице."
-    form:
-      title field: "Название:"
-      reference field: "Ссылка:"
-      labels field: "Ярлыки (через запятую):"
-      colors field: "Цвет:"
-      update button: "Обновить закладку"
-      save button: "Сохранить закладку"
   badges:
     earned a badge: "Заработан значок"
     user badges: "Значки %{user}"
-    earned date: "Заработан %{username} %{ago} назад"
-    none me: "Вы ещё не заработали значков."
-    none user: "%{username} ещё не заработал значков."
   plans:
-    widget:
-      my plans: "Мои планы чтения"
-      start reading: "Начать чтение"
-    settings: "Настройки"
-    privacy:
-      visible to friends?: "Хотите ли вы, чтобы друзья видели вашу активность по этому плану?"
-      private: "Личная"
-      public: "Публичные"
     title: "Планы чтения"
     browse by category: "Поиск по категориям"
     browse plans: "Просмотреть планы: %{category}"
@@ -598,6 +454,7 @@ ru:
     no public plans: "У %{username} нет публичных планов чтения."
     filter by lang: "Фильтровать планы по языку"
     plan settings: "Настройки плана"
+    settings: "Настройки"
     search: "Поиск"
     search placeholder: "Искать в планах: %{category}"
     subscribe to plan: "Начать этот план"
@@ -710,28 +567,17 @@ ru:
     chapter only: "Извините, для отдельных стихов прослушивание аудио недоступно. Откройте главу в окне чтения, чтобы прослушать аудио."
     close player menu: "Закрыть"
   highlights:
-    title: "Маркеры"
-    blank slate:
-      heading: "Выделить маркером значимые для вас стихи"
-      description: "Во время чтения Библии вы можете выбрать стихи и пометить их маркером. Просмотреть, изменить или удалить маркеры можно на этой странице."
-    none user: "У %{username} нет выделений маркером"
     choose color: "Выберите цвет"
-    create failure: "Ошибка сохранения маркера"
-    destroy success: "Маркер удалён"
-    destroy failure: "Ошибка удаления маркера"
     creation error: "Извините, выделить цветом не удалось."
     delete error: "Извините, удалить выделение цветом не удалось."
-    form:
-      save button: "Сохранить маркер"
   searching:
     bible: "Библия"
-    plans: "Планы"
+    plans: "Планы чтения"
     users: "Пользователи"
     notes: "Заметки"
     total results: "Примерно %{total} совпадений"
     suggestion html: "Вы имели в виду %{suggestion_link}?"
     all versions: "Все переводы на %{language_name}"
-    results for: "Результаты поиска для:"
   donate:
     donate now: "Отправить пожертвование"
     donate now intl: "или через PayPal (др. страны)"
@@ -901,6 +747,9 @@ ru:
     public domain: "Всеобщее достояние"
     loading: "Загружаю список переводов..."
     load error: "Извините, нам не удалось загрузить список переводов. Закройте это меню и откройте его снова."
+  reader help:
+    title: "Выберите стих..."
+    line 1: "Нажмите на любой стих или набор стихов, чтобы добавить закладку, выделить маркером, написать заметку или поделиться с друзьями."
   campaigns:
     100m:
       logo: "YouVersion: Приложение Библия"
@@ -930,9 +779,3 @@ ru:
       sidebar:
         tagline: "Давайте творить историю вместе!"
         button: "Поделиться приложением"
-  ui:
-    pagination:
-      next page: "След. страница"
-      previous page: "Пред. страница"
-    datetime:
-      just now: "только что"
