--- a/config/locales/ta.yml
+++ b/config/locales/ta.yml
@@ -60,6 +60,7 @@ ta:
   new note: "ஒரு குறிப்பை உருவாக்குக"
   share success: "உங்கள் செய்தி பகிர்ந்து கொள்ள பட்டிருக்கிறது."
   share error: "மன்னிக்கவும், உங்கள் செய்தியை பகிர்ந்து கொள்வதில் பிழை ஏற்பட்டிருக்கிறது. மீண்டும் முயற்சிக்கவும்."
+  google plus: "Google +"
   connect to: "உங்கள் %{connection} கணக்கினோடு  இணையுங்கள்"
   deleted connection: "%{connection}-னோடுள்ள உங்கள் இணைப்பு வெற்றிகரமாக துண்டிக்கப்பட்டது  "
   deleted connection error: "மன்னிக்கவும், %{connection}-னோடுள்ள உங்கள் இணைப்பை துண்டிப்பதில் பிழை ஏற்பட்டுள்ளது,"
@@ -128,13 +129,17 @@ ta:
   chapter: "அதிகாரம்"
   bible: "வேதாகமம்"
   notes title: "குறிப்புகள்"
+  friends: "நண்பர்கள்"
   groups: "குழுக்கள்"
   mobile: "மொபைல்"
   live: "நேரடி/குழுக்கள்"
   first page: "முதல் பக்கம்"
   last page: "கடைசி பக்கம்"
+  next page: "அடுத்த பக்கம்"
+  previous page: "முந்தின பக்கம்"
   invalid username or password: "தவறான பயனாளர் பெயர் அல்லது கடவுச்சொல்"
   show all bookmarks: "அனைத்து %{total} புத்தக அடையாள குறிகளையும் பார்க்கவும்"
+  show all notes: "அனைத்து %{total} குறிப்புகளையும் காண்க"
   recent bookmarks: "சமீபத்திய புத்தக அடையாள குறி"
   percentage display: "%{number}%"
   myself: "நான்"
@@ -145,24 +150,7 @@ ta:
   or:
     lower: "அல்லது"
     upper: "அல்லது"
-  moments:
-    action:
-      like: "விரும்பு"
-      share: "பகிர்"
-      edit: "திருத்து"
-  friendships:
-    status:
-      friends: "நண்பர்கள்"
   notes:
-    form:
-      title field: "தலைப்பு:"
-      content field: "உள்ளடக்கம்:"
-      reference field: "மேற்கோள்(கள்)"
-      save button: "சேமி"
-    status:
-      private: "தனிமறைவானது "
-      public: "பொதுவானது "
-      draft: "ஆரம்ப வரைபு"
     list title: "குறிப்புகள்"
     loading community: "சமூக குறிப்புகள் ஏற்றபட்டு கொண்டிருக்கிறது......"
     no community notes: "தேர்வு செய்யப்பட்டுள்ள வசனங்களோடு தொடர்புள்ள  சமூக குறிப்புகள் எதுவும் காணப்படவில்லை. குறிப்பு உருவாக்க, பைபிள் ரீடரில்  ஒரு வசனத்தை தேர்ந்தெடுத்த பின் ரீடரின் மேலே உள்ள Selected பொத்தானை கிளிக் செய்யவும்."
@@ -170,7 +158,6 @@ ta:
     private: "தனிமறைவானது "
     is private: "கோரப்பட்ட குறிப்பு தனிப்பட்டதாகும்."
     draft: "ஆரம்ப வரைபு"
-    friends: "நண்பர்கள்"
     creation form errors: "பின்வரும் பிழை (கள்) உங்கள் குறிப்பை உருவாக்குவதை தடுத்திருக்கிறது:"
     reference field: "மேற்கோள்(கள்)"
     version field: "மொழியாக்கம்:"
@@ -191,6 +178,7 @@ ta:
     cancel: "ரத்துசெய்"
     pop out: "குதித்து  வந்தவை  "
     none found: "குறிப்புகள் காணவில்லை"
+    successfully deleted: "குறிப்பு அகற்றப்பட்டது "
   ref:
     loading secondary: "இரண்டாம்நிலை பதிப்பில் மேற்கோளை  ஏற்றிக் கொண்டிருக்கிறது ... "
     clear verses: "தேர்ந்தெடுக்கப்பட்ட வசனங்களை நீக்கவும் "
@@ -263,6 +251,7 @@ ta:
     my badges: "எனது பேட்ஜ்கள்"
     revised date: "கடைசியாக %{date} அன்று திருத்தப்பட்டது "
     update email copy: "ஒரு புதிய மின்னஞ்சல் முகவரியை உள்ளிட்டு விட்டு  Update Email-இல் கிளிக் செய்யவும். உங்களுடைய புதிய மின்னஞ்சல் முகவரியை உறுதிப்படுத்தும் ஒரு இணைப்பை நாங்கள் உங்களுக்கு அனுப்புவோம்."
+    edit email: "மின்னஞ்சல் முகவரியை புதுப்பிக்கவும் "
     update email check: "உங்கள் புதிய மின்னஞ்சல் முகவரியை உறுதிப்படுத்த உங்கள் மின்னஞ்சலை சரிபார்த்து இணைப்பை கிளிக் செய்க."
     confirm update email success: "நன்றி! உங்கள் மின்னஞ்சல் முகவரியை புதுப்பித்து விட்டீர்கள்."
     confirm update email error: "மன்னிக்கவும், உங்கள் மின்னஞ்சல் முகவரி மாற்றம் பூர்த்தி செய்வதில் ஒரு பிரச்சனை உள்ளது."
@@ -363,10 +352,6 @@ ta:
       general title: "பொதுவான தகவல்கள்"
       general text: "முழு ஒப்பந்தம். இந்த உபயோக விதிமுறைகள், உங்களுக்கும்  LifeChurch.tv -க்கு மிடையேயான  முழு உடன்பாடாய் அமைந்து   உங்கள் YouVersion பயன்பாட்டை கட்டுப்படுத்தவும், YouVersion சம்பந்தமாக உங்களுக்கும் LifeChurch.tv -க்குமிடையே உள்ள எந்த முன் ஒப்பந்தங்களையும்  தள்ளி வைக்கவும் செய்கிறது. நீங்கள் கூடுதல் விதிமுறைகள் மற்றும் நிபந்தனைகளுக்கு உட்பட்டு இருக்கலாம்.  சட்டம் மற்றும் மன்றத்தின் தேர்ந்தெடுப்பு.உபயோக விதிமுறைகள் மற்றும் உங்களுக்கும்   LifeChurch.tv -க்கும் இடையே உள்ள உறவு சட்ட, விதி முரண்பாடுகளை சாராமல் ஓக்லஹோமா மாநில சட்டங்கள் மூலம் நிர்வகிக்கப்படுகிறது.நீங்களும் LifeChurch.tv -யும் ஓக்லஹோமா, ஓக்லஹோமா மாவட்டத்தில் அமைந்துள்ள நீதிமன்றங்களின் தனிப்பட்ட மற்றும் பிரத்தியேக அதிகார வரம்பிற்குள் சமர்ப்பிக்க சம்மதிக்கிறோம். <br><br> விலக்கு அளித்தலும் விதிகளின் தீவிரமும்.இந்த விதிமுறைகளில் எதையாவது செயல்படுத்தவோ அமல்படுத்தவோ LifeChurch.tv தவறி விடுவது அப்படிப்பட்ட எந்த உரிமை அல்லது கட்டுப்பாட்டு விதிகளை பின்பற்றுவதிலிருந்து விலக்கு அளித்தலாக அமையாது. (1) "
     profile:
-      tab friends: "நண்பர்கள்"
-      tab notes: "குறிப்புகள்"
-      tab bookmarks: "புத்தகக்குறிகள்"
-      tab badges: "Badges"
       first name: "முதல் பெயர்"
       last name: "கடைசிப் பெயர்"
       email: "மின்னஞ்சல் முகவரி"
@@ -419,6 +404,9 @@ ta:
     not found: "புத்தகக்குறிகள், உங்களுக்கு பிடித்தமான வேத பகுதிகளையோ அல்லது கடைசியாக நீங்கள் வாசித்த குறிப்பிட்ட புத்தகத்தில் உள்ள அதிகாரத்தையோ விரைவாக எடுக்க உதவுகிறது.  புத்தகக்குறியிட, ஒரு வேதவசனத்தை தெரிந்தெடுத்து, Bible readerல் மேலே தெரிந்தெடுக்கப்பட்ட பொத்தானை அமுக்கவும்.  "
     other user not found: "%{username} எந்த புக்மார்க்குகளையும் இதுவரை சேமிக்கவில்லை."
     creation form errors: "பின்வரும் பிழை (கள்) உங்கள் புக்மார்க் உருவாக்கத்தை தடுத்தது:"
+    successfully created: "புத்தகக்குறி சேர்க்கப்பட்டது"
+    successfully deleted: "புக்மார்க் அகற்றப்பட்டது "
+    successfully updated: "புக்மார்க் புதுப்பிக்கப்பட்டது"
     labels placeholder: "ஒன்றுக்கும் மேட்பட்ட label களை, காற்புள்ளியால் பிரிக்கவும்."
     save: "புத்தகக்குறியை சேமிக்கவும்"
     confirm delete: "ஆம், நான் சொல்வது நிச்சயமே"
@@ -429,26 +417,10 @@ ta:
     update: "புதுப்பிப்பு "
     color: "நிறம்:"
     version field: "பதிப்பு:"
-    form:
-      title field: "தலைப்பு:"
-      reference field: "குறிப்புதவி:"
-      labels field: "அடையாளச் சீட்டு (comma-separated):"
-      colors field: "நிறம்:"
-      save button: "புத்தகக்குறியை சேமிக்கவும்"
   badges:
     earned a badge: "ஒரு அடையாள வில்லையை சம்பாதித்துள்ளீர்கள்"
     user badges: "%{user} -ன் அடையாள வில்லைகள்"
-    earned date: "%{username} %{ago} முன்பு பெறப்பட்டது."
-    none me: "நீங்கள் இன்னும் எந்த badges-யும் பெற வில்லை."
-    none user: "%{username} இன்னும் எந்த badges-யும் பெற வில்லை."
   plans:
-    widget:
-      my plans: "என்னுடைய திட்டங்கள்"
-      start reading: "வாசிப்பை ஆரம்பிக்கவும் "
-    settings: "அமைப்புகள்"
-    privacy:
-      private: "தனிமறைவானது "
-      public: "பொதுவானது "
     title: "வாசிப்பு திட்டங்கள்"
     browse by category: "வகை வாரியாக உலவ "
     browse plans: "%{category} திட்டங்களை காண்க"
@@ -479,6 +451,7 @@ ta:
     no public plans: "எந்த வாசிப்பு திட்டங்களும்  %{username} -க்கு காணப்பட வில்லை."
     filter by lang: "திட்டங்களை மொழிவாரியாக பிரிக்கவும்."
     plan settings: "திட்ட அமைவுகள்"
+    settings: "அமைப்புகள்"
     search: "தேடு"
     search placeholder: "திட்டங்களை %{category} தேடவும்."
     subscribe to plan: "இந்த திட்டத்தை தொடங்கவும்."
@@ -596,6 +569,7 @@ ta:
     delete error: "மன்னிக்கவும், உயர்த்திக்காட்டலை நீக்க முடியாது."
   searching:
     bible: "வேதாகமம்"
+    plans: "வாசிப்பு திட்டங்கள்"
     users: "பயனாளர்கள்"
     notes: "குறிப்புகள்"
     total results: "%{total} பற்றிய முடிவுகள்"
@@ -770,6 +744,9 @@ ta:
     public domain: "பொது தளம்"
     loading: "கூடுதல் பதிப்புகளை  ஏற்றுகிறது ..."
     load error: "மன்னிக்கவும், மேலும் பதிப்புகளை  ஏற்றுவதில் சிக்கல் ஏற்பட்டுள்ளது. இந்த பட்டியலை  மூடிவிட்டு மீண்டும் முயற்சிக்கவும்."
+  reader help:
+    title: "ஒரு வசனத்தை தேர்ந்தெடுக்கவும்...."
+    line 1: "ஏதெங்கிலும் ஒரு வசனத்தின் அல்லது வசன தொகுப்பின் மீது       கிளிக்  அல்லது தட்டுவதின் மூலம் புக்மார்க் செய்ய, முன்னிலைப்படுத்த, ஒரு குறிப்பு உருவாக்க அல்லது நண்பர்களுடன் பகிர்ந்து கொள்ள முடியும்."
   campaigns:
     100m:
       logo: "YouVersion: பைபிள் app"
@@ -799,7 +776,3 @@ ta:
       sidebar:
         tagline: "நாம் ஒன்றிணைந்து வரலாறு படைப்போம்."
         button: "பைபிள்  App ஐ பகிரவும்"
-  ui:
-    pagination:
-      next page: "அடுத்த பக்கம்"
-      previous page: "முந்தின பக்கம்"
